@@ -34,11 +34,12 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.zip.CRC32;
 
 import com.dabomstew.pkrandom.exceptions.InvalidSupplementFilesException;
-import com.dabomstew.pkrandom.newgui.NewRandomizerGUI;
+import com.dabomstew.pkrandom.gui.RandomizerGUI;
 
 public class Utils {
 
@@ -116,10 +117,10 @@ public class Utils {
     }
 
     public static File getExecutionLocation() throws UnsupportedEncodingException {
-        URL location = NewRandomizerGUI.class.getProtectionDomain().getCodeSource().getLocation();
+        URL location = RandomizerGUI.class.getProtectionDomain().getCodeSource().getLocation();
         String file = location.getFile();
         String plusEncoded = file.replaceAll("\\+", "%2b");
-        return new File(java.net.URLDecoder.decode(plusEncoded, "UTF-8"));
+        return new File(java.net.URLDecoder.decode(plusEncoded, StandardCharsets.UTF_8));
     }
 
     public static class InvalidROMException extends Exception {
