@@ -29,6 +29,7 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import com.dabomstew.pkrandom.RomFunctions;
 import com.dabomstew.pkrandom.pokemon.*;
 
 public class Gen4Constants {
@@ -84,6 +85,8 @@ public class Gen4Constants {
 
     public static final int tmItemOffset = Items.tm01;
 
+    public static final byte tmsReusableByteBefore = (byte) 0xD1, tmsReusableByteAfter = (byte) 0xE0;
+
     private static final int dpptTextCharsPerLine = 38, hgssTextCharsPerLine = 36;
 
     public static final String dpItemPalettesPrefix = "8D018E01210132018D018F0122013301",
@@ -94,6 +97,24 @@ public class Gen4Constants {
     public static final int evolutionMethodCount = 26;
 
     public static final int highestAbilityIndex = Abilities.badDreams;
+
+    // by AdAstra
+    public static final byte[] mysteryEggCommandImprovement = RomFunctions.hexToBytes(
+                    "F8 B5 84 B0 80 30 07 68 F8 68 26 F6 E1 FE 04 1C" +
+                    "F8 68 72 F6 11 FC 02 90 72 F6 AC FA 06 28 57 DA" +
+                    "0B 20 6B F6 1D FE 05 1C 6B F6 F6 FD 01 20 0D 21" +
+                    "15 F6 72 FF 03 21 00 91 01 90 28 1C 26 49 01 22" +
+                    "23 1C 6A F6 D3 FB 00 24 26 1C 21 1C 28 1C 36 31" +
+                    "32 1C 6C F6 0F FA 00 28 02 D0 01 34 04 2C F4 DB" +
+                    "04 2C 00 D1 03 24 1D 49 03 A8 41 80 21 1C 03 AA" +
+                    "28 1C 36 31 02 32 6C F6 7D FD 21 1C 28 1C 42 31" +
+                    "00 22 6C F6 F7 F9 03 A9 08 70 3A 34 28 1C 21 1C" +
+                    "03 AA 6C F6 6F FD 02 98 29 1C 72 F6 DD F9 28 1C" +
+                    "18 F6 CE FC F8 68 28 F6 EF FB 00 21 04 1C 28 1C" +
+                    "0A 1C 6C F6 DF F9 06 1C 28 1C 6F 21 00 22 6C F6" +
+                    "D9 F9 02 1C 12 06 20 1C 31 1C 12 0E 28 F6 0A FD" +
+                    "00 20 04 B0 F8 BD 00 00"
+    );
 
     public static final List<Integer> consumableHeldItems = Arrays.asList(
             Items.cheriBerry, Items.chestoBerry, Items.pechaBerry, Items.rawstBerry, Items.aspearBerry,
@@ -156,7 +177,7 @@ public class Gen4Constants {
         map.put(Type.GRASS, Arrays.asList(Items.miracleSeed, Items.meadowPlate, Items.roseIncense));
         map.put(Type.GROUND, Arrays.asList(Items.softSand, Items.earthPlate));
         map.put(Type.ICE, Arrays.asList(Items.neverMeltIce, Items.iciclePlate));
-        map.put(Type.NORMAL, Arrays.asList(Items.silkScarf));
+        map.put(Type.NORMAL, List.of(Items.silkScarf));
         map.put(Type.POISON, Arrays.asList(Items.poisonBarb, Items.toxicPlate));
         map.put(Type.PSYCHIC, Arrays.asList(Items.twistedSpoon, Items.mindPlate, Items.oddIncense));
         map.put(Type.ROCK, Arrays.asList(Items.hardStone, Items.stonePlate, Items.rockIncense));
@@ -170,56 +191,56 @@ public class Gen4Constants {
 
     private static Map<Integer, List<Integer>> initializeMoveBoostingItems() {
         Map<Integer, List<Integer>> map = new HashMap<>();
-        map.put(Moves.bounce, Arrays.asList(Items.powerHerb));
-        map.put(Moves.dig, Arrays.asList(Items.powerHerb));
-        map.put(Moves.dive, Arrays.asList(Items.powerHerb));
-        map.put(Moves.fly, Arrays.asList(Items.powerHerb));
-        map.put(Moves.razorWind, Arrays.asList(Items.powerHerb));
-        map.put(Moves.skullBash, Arrays.asList(Items.powerHerb));
-        map.put(Moves.skyAttack, Arrays.asList(Items.powerHerb));
-        map.put(Moves.solarBeam, Arrays.asList(Items.powerHerb));
+        map.put(Moves.bounce, List.of(Items.powerHerb));
+        map.put(Moves.dig, List.of(Items.powerHerb));
+        map.put(Moves.dive, List.of(Items.powerHerb));
+        map.put(Moves.fly, List.of(Items.powerHerb));
+        map.put(Moves.razorWind, List.of(Items.powerHerb));
+        map.put(Moves.skullBash, List.of(Items.powerHerb));
+        map.put(Moves.skyAttack, List.of(Items.powerHerb));
+        map.put(Moves.solarBeam, List.of(Items.powerHerb));
 
         map.put(Moves.fling, Arrays.asList(Items.toxicOrb, Items.flameOrb, Items.ironBall));
 
         map.put(Moves.trick, Arrays.asList(Items.toxicOrb, Items.flameOrb, Items.fullIncense, Items.laggingTail));
         map.put(Moves.switcheroo, Arrays.asList(Items.toxicOrb, Items.flameOrb, Items.fullIncense, Items.laggingTail));
 
-        map.put(Moves.trickRoom, Arrays.asList(Items.ironBall));
+        map.put(Moves.trickRoom, List.of(Items.ironBall));
 
         map.put(Moves.facade, Arrays.asList(Items.toxicOrb, Items.flameOrb));
 
         map.put(Moves.psychoShift, Arrays.asList(Items.toxicOrb, Items.flameOrb));
 
-        map.put(Moves.lightScreen, Arrays.asList(Items.lightClay));
-        map.put(Moves.reflect, Arrays.asList(Items.lightClay));
+        map.put(Moves.lightScreen, List.of(Items.lightClay));
+        map.put(Moves.reflect, List.of(Items.lightClay));
 
-        map.put(Moves.hail, Arrays.asList(Items.icyRock));
+        map.put(Moves.hail, List.of(Items.icyRock));
 
-        map.put(Moves.sandstorm, Arrays.asList(Items.smoothRock));
+        map.put(Moves.sandstorm, List.of(Items.smoothRock));
 
-        map.put(Moves.sunnyDay, Arrays.asList(Items.heatRock));
+        map.put(Moves.sunnyDay, List.of(Items.heatRock));
 
-        map.put(Moves.rainDance, Arrays.asList(Items.dampRock));
+        map.put(Moves.rainDance, List.of(Items.dampRock));
 
-        map.put(Moves.bind, Arrays.asList(Items.gripClaw));
-        map.put(Moves.clamp, Arrays.asList(Items.gripClaw));
-        map.put(Moves.fireSpin, Arrays.asList(Items.gripClaw));
-        map.put(Moves.magmaStorm, Arrays.asList(Items.gripClaw));
-        map.put(Moves.outrage, Arrays.asList(Items.gripClaw));
-        map.put(Moves.sandTomb, Arrays.asList(Items.gripClaw));
-        map.put(Moves.uproar, Arrays.asList(Items.gripClaw));
-        map.put(Moves.whirlpool, Arrays.asList(Items.gripClaw));
-        map.put(Moves.wrap, Arrays.asList(Items.gripClaw));
+        map.put(Moves.bind, List.of(Items.gripClaw));
+        map.put(Moves.clamp, List.of(Items.gripClaw));
+        map.put(Moves.fireSpin, List.of(Items.gripClaw));
+        map.put(Moves.magmaStorm, List.of(Items.gripClaw));
+        map.put(Moves.outrage, List.of(Items.gripClaw));
+        map.put(Moves.sandTomb, List.of(Items.gripClaw));
+        map.put(Moves.uproar, List.of(Items.gripClaw));
+        map.put(Moves.whirlpool, List.of(Items.gripClaw));
+        map.put(Moves.wrap, List.of(Items.gripClaw));
 
-        map.put(Moves.absorb, Arrays.asList(Items.bigRoot));
-        map.put(Moves.aquaRing, Arrays.asList(Items.bigRoot));
-        map.put(Moves.drainPunch, Arrays.asList(Items.bigRoot));
-        map.put(Moves.dreamEater, Arrays.asList(Items.bigRoot));
-        map.put(Moves.gigaDrain, Arrays.asList(Items.bigRoot));
-        map.put(Moves.ingrain, Arrays.asList(Items.bigRoot));
-        map.put(Moves.leechLife, Arrays.asList(Items.bigRoot));
-        map.put(Moves.leechSeed, Arrays.asList(Items.bigRoot));
-        map.put(Moves.megaDrain, Arrays.asList(Items.bigRoot));
+        map.put(Moves.absorb, List.of(Items.bigRoot));
+        map.put(Moves.aquaRing, List.of(Items.bigRoot));
+        map.put(Moves.drainPunch, List.of(Items.bigRoot));
+        map.put(Moves.dreamEater, List.of(Items.bigRoot));
+        map.put(Moves.gigaDrain, List.of(Items.bigRoot));
+        map.put(Moves.ingrain, List.of(Items.bigRoot));
+        map.put(Moves.leechLife, List.of(Items.bigRoot));
+        map.put(Moves.leechSeed, List.of(Items.bigRoot));
+        map.put(Moves.megaDrain, List.of(Items.bigRoot));
 
         return Collections.unmodifiableMap(map);
     }
@@ -251,17 +272,17 @@ public class Gen4Constants {
 
     private static Map<Integer, List<Integer>> initializeSpeciesBoostingItems() {
         Map<Integer, List<Integer>> map = new HashMap<>();
-        map.put(Species.dialga, Arrays.asList(Items.adamantOrb));
-        map.put(Species.palkia, Arrays.asList(Items.lustrousOrb));
-        map.put(Species.latias, Arrays.asList(Items.soulDew));
-        map.put(Species.latios, Arrays.asList(Items.soulDew));
+        map.put(Species.dialga, List.of(Items.adamantOrb));
+        map.put(Species.palkia, List.of(Items.lustrousOrb));
+        map.put(Species.latias, List.of(Items.soulDew));
+        map.put(Species.latios, List.of(Items.soulDew));
         map.put(Species.clamperl, Arrays.asList(Items.deepSeaTooth, Items.deepSeaScale));
-        map.put(Species.pikachu, Arrays.asList(Items.lightBall));
-        map.put(Species.chansey, Arrays.asList(Items.luckyPunch));
+        map.put(Species.pikachu, List.of(Items.lightBall));
+        map.put(Species.chansey, List.of(Items.luckyPunch));
         map.put(Species.ditto, Arrays.asList(Items.metalPowder, Items.quickPowder));
-        map.put(Species.cubone, Arrays.asList(Items.thickClub));
-        map.put(Species.marowak, Arrays.asList(Items.thickClub));
-        map.put(Species.farfetchd, Arrays.asList(Items.leek));
+        map.put(Species.cubone, List.of(Items.thickClub));
+        map.put(Species.marowak, List.of(Items.thickClub));
+        map.put(Species.farfetchd, List.of(Items.leek));
         return Collections.unmodifiableMap(map);
     }
 
@@ -297,7 +318,7 @@ public class Gen4Constants {
 
     public static final int itemScriptVariable = 0x8008;
 
-    private static List<String> dpShopNames = Arrays.asList(
+    private static final List<String> dpShopNames = Arrays.asList(
             "Sunyshore Secondary",
             "Jubilife Secondary",
             "Floaroma Secondary",
@@ -329,7 +350,7 @@ public class Gen4Constants {
             "Progressive Shops"
     );
 
-    private static List<String> ptShopNames = Arrays.asList(
+    private static final List<String> ptShopNames = Arrays.asList(
             "Jubilife Secondary",
             "Sunyshore Secondary",
             "Floaroma Secondary",
@@ -362,7 +383,7 @@ public class Gen4Constants {
             "Progressive Shops"
     );
 
-    private static List<String> hgssShopNames = Arrays.asList(
+    private static final List<String> hgssShopNames = Arrays.asList(
             "Cherrygrove Secondary",
             "Cerulean Secondary",
             "Ecruteak Secondary",
@@ -461,213 +482,104 @@ public class Gen4Constants {
 
     public static final String lyraEthanMarillSpritePrefix = "274E0604C301274E0704E101274E0804";
 
-    public static final List<Integer> hgssBigOverworldPokemon = Arrays.asList(
-            536, // MMODEL_FOLLOWER_MON_STEELIX
-            537, // MMODEL_FOLLOWER_MON_STEELIX_F
-            579, // MMODEL_FOLLOWER_MON_LUGIA
-            580, // MMODEL_FOLLOWER_MON_HO_OH
-            651, // MMODEL_FOLLOWER_MON_WAILORD
-            712, // MMODEL_FOLLOWER_MON_KYOGRE
-            713, // MMODEL_FOLLOWER_MON_GROUDON
-            714, // MMODEL_FOLLOWER_MON_RAYQUAZA
-            833, // MMODEL_FOLLOWER_MON_DIALGA
-            834, // MMODEL_FOLLOWER_MON_PALKIA
-            836, // MMODEL_FOLLOWER_MON_REGIGIGAS
-            837, // MMODEL_FOLLOWER_MON_GIRATINA
-            838, // MMODEL_FOLLOWER_MON_GIRATINA_ORIGIN
-            845, // MMODEL_FOLLOWER_MON_ARCEUS_NORMAL
-            846, // MMODEL_FOLLOWER_MON_ARCEUS_FIGHTING
-            847, // MMODEL_FOLLOWER_MON_ARCEUS_FLYING
-            848, // MMODEL_FOLLOWER_MON_ARCEUS_POISON
-            849, // MMODEL_FOLLOWER_MON_ARCEUS_GROUND
-            850, // MMODEL_FOLLOWER_MON_ARCEUS_ROCK
-            851, // MMODEL_FOLLOWER_MON_ARCEUS_BUG
-            852, // MMODEL_FOLLOWER_MON_ARCEUS_GHOST
-            853, // MMODEL_FOLLOWER_MON_ARCEUS_STEEL
-            854, // MMODEL_FOLLOWER_MON_ARCEUS_MYSTERY
-            855, // MMODEL_FOLLOWER_MON_ARCEUS_FIRE
-            856, // MMODEL_FOLLOWER_MON_ARCEUS_WATER
-            857, // MMODEL_FOLLOWER_MON_ARCEUS_GRASS
-            858, // MMODEL_FOLLOWER_MON_ARCEUS_ELECTRIC
-            859, // MMODEL_FOLLOWER_MON_ARCEUS_PSYCHIC
-            860, // MMODEL_FOLLOWER_MON_ARCEUS_ICE
-            861, // MMODEL_FOLLOWER_MON_ARCEUS_DRAGON
-            862  // MMODEL_FOLLOWER_MON_ARCEUS_DARK
-    );
+    private final static int bulbasaurOverworldSpriteID = 297;
 
-    public static final List<Integer> hgssBannedOverworldPokemon = Arrays.asList(
-            // Unown alts (to avoid 28x chance of getting Unown)
-            // Arcues alts (to avoid 18x chance of getting Arceus)
-            502, // MMODEL_FOLLOWER_MON_UNOWN_B
-            503, // MMODEL_FOLLOWER_MON_UNOWN_C
-            504, // MMODEL_FOLLOWER_MON_UNOWN_D
-            505, // MMODEL_FOLLOWER_MON_UNOWN_E
-            506, // MMODEL_FOLLOWER_MON_UNOWN_F
-            507, // MMODEL_FOLLOWER_MON_UNOWN_G
-            508, // MMODEL_FOLLOWER_MON_UNOWN_H
-            509, // MMODEL_FOLLOWER_MON_UNOWN_I
-            510, // MMODEL_FOLLOWER_MON_UNOWN_J
-            511, // MMODEL_FOLLOWER_MON_UNOWN_K
-            512, // MMODEL_FOLLOWER_MON_UNOWN_L
-            513, // MMODEL_FOLLOWER_MON_UNOWN_M
-            514, // MMODEL_FOLLOWER_MON_UNOWN_N
-            515, // MMODEL_FOLLOWER_MON_UNOWN_O
-            516, // MMODEL_FOLLOWER_MON_UNOWN_P
-            517, // MMODEL_FOLLOWER_MON_UNOWN_Q
-            518, // MMODEL_FOLLOWER_MON_UNOWN_R
-            519, // MMODEL_FOLLOWER_MON_UNOWN_S
-            520, // MMODEL_FOLLOWER_MON_UNOWN_T
-            521, // MMODEL_FOLLOWER_MON_UNOWN_U
-            522, // MMODEL_FOLLOWER_MON_UNOWN_V
-            523, // MMODEL_FOLLOWER_MON_UNOWN_W
-            524, // MMODEL_FOLLOWER_MON_UNOWN_X
-            525, // MMODEL_FOLLOWER_MON_UNOWN_Y
-            526, // MMODEL_FOLLOWER_MON_UNOWN_Z
-            527, // MMODEL_FOLLOWER_MON_UNOWN_QMARK
-            528, // MMODEL_FOLLOWER_MON_UNOWN_EXCL
-            846, // MMODEL_FOLLOWER_MON_ARCEUS_FIGHTING
-            847, // MMODEL_FOLLOWER_MON_ARCEUS_FLYING
-            848, // MMODEL_FOLLOWER_MON_ARCEUS_POISON
-            849, // MMODEL_FOLLOWER_MON_ARCEUS_GROUND
-            850, // MMODEL_FOLLOWER_MON_ARCEUS_ROCK
-            851, // MMODEL_FOLLOWER_MON_ARCEUS_BUG
-            852, // MMODEL_FOLLOWER_MON_ARCEUS_GHOST
-            853, // MMODEL_FOLLOWER_MON_ARCEUS_STEEL
-            854, // MMODEL_FOLLOWER_MON_ARCEUS_MYSTERY
-            855, // MMODEL_FOLLOWER_MON_ARCEUS_FIRE
-            856, // MMODEL_FOLLOWER_MON_ARCEUS_WATER
-            857, // MMODEL_FOLLOWER_MON_ARCEUS_GRASS
-            858, // MMODEL_FOLLOWER_MON_ARCEUS_ELECTRIC
-            859, // MMODEL_FOLLOWER_MON_ARCEUS_PSYCHIC
-            860, // MMODEL_FOLLOWER_MON_ARCEUS_ICE
-            861, // MMODEL_FOLLOWER_MON_ARCEUS_DRAGON
-            862  // MMODEL_FOLLOWER_MON_ARCEUS_DARK
-    );
-
-    public static final int convertOverworldSpriteToSpecies(int overworldSpriteID) {
-        int speciesID = overworldSpriteID - 296;
-
-        // Venusaur
-        if (overworldSpriteID >= 300) {
-            speciesID -= 1;
+    /**
+     * Returns the first overworld sprite ID for a given Pokemon species.
+     * Some species have more than one sprite ID, either due to gender
+     * differences or formes, but this gives the first one only.
+     */
+    public static int getOverworldSpriteIDOfSpecies(int species) {
+        int spriteID = bulbasaurOverworldSpriteID;
+        for (int i = 1; i < species; i++) {
+            spriteID += speciesToOverworldSpriteAmount.getOrDefault(i, 1);
         }
+        return spriteID;
+    }
 
-        // Pikachu
-        if (overworldSpriteID >= 323) {
-            speciesID -= 1;
-        }
+    private final static Map<Integer, Integer> speciesToOverworldSpriteAmount = initSpeciesToOverworldSpriteAmount();
 
-        // Meganium
-        if (overworldSpriteID >= 453) {
-            speciesID -= 1;
-        }
+    private static Map<Integer, Integer> initSpeciesToOverworldSpriteAmount() {
+        Map<Integer, Integer> map = new HashMap<>();
+        map.put(Species.venusaur, 2);
+        map.put(Species.pikachu, 2);
+        map.put(Species.meganium, 2);
+        map.put(Species.pichu, 2);
+        map.put(Species.unown, 28);
+        map.put(Species.wobbuffet, 2);
+        map.put(Species.steelix, 2);
+        map.put(Species.heracross, 2);
+        map.put(Species.deoxys, 4);
+        map.put(Species.burmy, 3);
+        map.put(Species.wormadam, 3);
+        map.put(Species.combee, 2);
+        map.put(Species.shellos, 2);
+        map.put(Species.gastrodon, 2);
+        map.put(Species.gible, 2);
+        map.put(Species.gabite, 2);
+        map.put(Species.garchomp, 2);
+        map.put(Species.hippopotas, 2);
+        map.put(Species.hippowdon, 2);
+        map.put(Species.rotom, 6);
+        map.put(Species.giratina, 2);
+        map.put(Species.arceus, 18);
+        return map;
+    }
 
-        // Pichu
-        if (overworldSpriteID >= 472) {
-            speciesID -= 1;
-        }
+    // Technically the property of being big or not is one of the sprites and not species,
+    // but it just happens that all species with SOME overworld sprite that's big have all
+    // their overworld sprites be big.
+    public static final List<Integer> hgssBigOverworldPokemon = List.of(Species.steelix, Species.lugia, Species.hoOh,
+            Species.wailord, Species.kyogre, Species.groudon, Species.rayquaza, Species.dialga, Species.palkia,
+            Species.regigigas, Species.giratina, Species.arceus);
 
-        // Unown
-        if (overworldSpriteID >= 528) {
-            speciesID -= 27;
-        } else if (overworldSpriteID > 501) {
-            speciesID -= (overworldSpriteID - 501);
-        }
+    /**
+     * Maps {@link Species} IDs to the file indices of images found in the OtherPokemonGraphics NARC.<br>
+     * [0] lists the front images, [1] the back images.
+     */
+    public static final Map<Integer, int[][]> otherPokemonGraphicsImages = initOtherPokemonGraphicsImages();
 
-        // Wobbuffet
-        if (overworldSpriteID >= 530) {
-            speciesID -= 1;
-        }
+    private static Map<Integer,int[][]> initOtherPokemonGraphicsImages() {
+        Map<Integer, int[][]> palettes = new HashMap<>();
+        palettes.put(Species.unown, new int[][]{
+                // alphabetical order, !, ?
+                {9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 61, 63},
+                {8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62}});
+        palettes.put(Species.castform, new int[][]{{68, 69, 70, 71}, {64, 65, 66, 67}}); // normal, sunny, rainy, snowy
+        palettes.put(Species.deoxys, new int[][]{{1, 3, 5, 7}, {0, 2, 4, 6}}); // normal, attack, defense, speed
+        palettes.put(Species.burmy, new int[][]{{73, 75, 77}, {72, 74, 76}}); // plant, sandy, trash
+        palettes.put(Species.wormadam, new int[][]{{79, 81, 83}, {78, 80, 82}}); // plant, sandy, trash
+        palettes.put(Species.cherrim, new int[][]{{94, 95}, {92, 93}}); // normal, sunny
+        palettes.put(Species.shellos, new int[][]{{86, 87}, {84, 85}}); // west, east
+        palettes.put(Species.gastrodon, new int[][]{{90, 91}, {88, 89}}); // west, east
+        palettes.put(Species.arceus, new int[][]{
+                // same order as types internally, see typeToByte() (though ??? type is also included)
+                {97, 99, 101, 103, 105, 107, 109, 111, 113, 115, 117, 119, 121, 123, 125, 127, 129, 131},
+                {96, 98, 100, 102, 104, 106, 108, 110, 112, 114, 116, 118, 120, 122, 124, 126, 128, 130}});
+        return Collections.unmodifiableMap(palettes);
+    }
 
-        // Steelix
-        if (overworldSpriteID >= 537) {
-            speciesID -= 1;
-        }
+    /**
+     * Maps {@link Species} IDs to the file indices of palettes found in the OtherPokemonGraphics NARC.<br>
+     * [0] lists the normal palettes, [1] the shiny palettes.
+     */
+    public static final Map<Integer, int[][]> otherPokemonGraphicsPalettes = initOtherPokemonGraphicsPalettes();
 
-        // Heracross
-        if (overworldSpriteID >= 544) {
-            speciesID -= 1;
-        }
-
-        // Deoxys
-        if (overworldSpriteID >= 719) {
-            speciesID -= 3;
-        } else if (overworldSpriteID > 716) {
-            speciesID -= (overworldSpriteID - 716);
-        }
-
-        // Burmy
-        if (overworldSpriteID >= 747) {
-            speciesID -= 2;
-        } else if (overworldSpriteID > 745) {
-            speciesID -= (overworldSpriteID - 745);
-        }
-
-        // Wormadam
-        if (overworldSpriteID >= 750) {
-            speciesID -= 2;
-        } else if (overworldSpriteID > 748) {
-            speciesID -= (overworldSpriteID - 748);
-        }
-
-        // Combee
-        if (overworldSpriteID >= 753) {
-            speciesID -= 1;
-        }
-
-        // Shellos
-        if (overworldSpriteID >= 761) {
-            speciesID -= 1;
-        }
-
-        // Gastrodon
-        if (overworldSpriteID >= 763) {
-            speciesID -= 1;
-        }
-
-        // Gible
-        if (overworldSpriteID >= 784) {
-            speciesID -= 1;
-        }
-
-        // Gabite
-        if (overworldSpriteID >= 786) {
-            speciesID -= 1;
-        }
-
-        // Garchomp
-        if (overworldSpriteID >= 788) {
-            speciesID -= 1;
-        }
-
-        // Hippopotas
-        if (overworldSpriteID >= 793) {
-            speciesID -= 1;
-        }
-
-        // Hippowdon
-        if (overworldSpriteID >= 795) {
-            speciesID -= 1;
-        }
-
-        // Rotom
-        if (overworldSpriteID >= 829) {
-            speciesID -= 5;
-        } else if (overworldSpriteID > 824) {
-            speciesID -= (overworldSpriteID - 824);
-        }
-
-        // Giratina
-        if (overworldSpriteID >= 838) {
-            speciesID -= 1;
-        }
-
-        // Arceus
-        if (overworldSpriteID > 845) {
-            speciesID -= (overworldSpriteID - 845);
-        }
-
-        return speciesID;
+    private static Map<Integer,int[][]> initOtherPokemonGraphicsPalettes() {
+        Map<Integer, int[][]> palettes = new HashMap<>();
+        palettes.put(Species.unown, new int[][]{{136}, {137}});
+        palettes.put(Species.castform, new int[][]{{138, 139, 140, 141}, {142, 143, 144, 145}}); // normal, sunny, rainy, snowy
+        palettes.put(Species.deoxys, new int[][]{{134}, {135}});
+        palettes.put(Species.burmy, new int[][]{{146, 148, 150}, {147, 149, 151}}); // plant, sandy, trash
+        palettes.put(Species.wormadam, new int[][]{{152, 154, 156}, {153, 155, 157}}); // plant, sandy, trash
+        palettes.put(Species.cherrim, new int[][]{{166, 167}, {168, 169}}); // normal, sunny
+        palettes.put(Species.shellos, new int[][]{{158, 160}, {159, 161}}); // west, east
+        palettes.put(Species.gastrodon, new int[][]{{162, 164}, {163, 165}}); // west, east
+        palettes.put(Species.arceus, new int[][]{
+                // same order as types internally, see typeToByte() (though this also includes a ???-type)
+                {170, 172, 174, 176, 178, 180, 182, 184, 186, 188, 190, 192, 194, 196, 198, 200, 202, 204},
+                {171, 173, 175, 177, 179, 181, 183, 185, 187, 189, 191, 193, 195, 197, 199, 201, 203, 205}});
+        return Collections.unmodifiableMap(palettes);
     }
 
     // The original slot each of the 20 "alternate" slots is mapped to
@@ -685,6 +597,8 @@ public class Gen4Constants {
     public static final String[] hgssNonGrassSetNames = new String[] { "", "Surfing", "Rock Smash", "Old Rod",
             "Good Rod", "Super Rod" };
     public static final int hgssGoodRodReplacementIndex = 3, hgssSuperRodReplacementIndex = 1;
+
+    public static final double stabMultiplier = 1.5;
 
     public static final MoveCategory[] moveCategoryIndices = { MoveCategory.PHYSICAL, MoveCategory.SPECIAL,
             MoveCategory.STATUS };
@@ -926,15 +840,15 @@ public class Gen4Constants {
 
         regularShopItems = new ArrayList<>();
 
-        regularShopItems.addAll(IntStream.rangeClosed(Items.ultraBall, Items.pokeBall).boxed().collect(Collectors.toList()));
-        regularShopItems.addAll(IntStream.rangeClosed(Items.potion, Items.revive).boxed().collect(Collectors.toList()));
-        regularShopItems.addAll(IntStream.rangeClosed(Items.superRepel, Items.repel).boxed().collect(Collectors.toList()));
+        regularShopItems.addAll(IntStream.rangeClosed(Items.ultraBall, Items.pokeBall).boxed().toList());
+        regularShopItems.addAll(IntStream.rangeClosed(Items.potion, Items.revive).boxed().toList());
+        regularShopItems.addAll(IntStream.rangeClosed(Items.superRepel, Items.repel).boxed().toList());
 
         opShopItems = new ArrayList<>();
 
         // "Money items" etc
         opShopItems.add(Items.rareCandy);
-        opShopItems.addAll(IntStream.rangeClosed(Items.tinyMushroom, Items.nugget).boxed().collect(Collectors.toList()));
+        opShopItems.addAll(IntStream.rangeClosed(Items.tinyMushroom, Items.nugget).boxed().toList());
         opShopItems.add(Items.rareBone);
         opShopItems.add(Items.luckyEgg);
     }
@@ -1589,6 +1503,37 @@ public class Gen4Constants {
         }
     }
 
+    public static final byte typeTableTerminator = (byte) 0xFF, typeTableForesightTerminator = (byte) 0xFE;
+
+    public static final int nonNeutralEffectivenessCount = 110;
+
+    private static final EvolutionType[] evolutionTypeTable = new EvolutionType[] {
+            EvolutionType.HAPPINESS, EvolutionType.HAPPINESS_DAY, EvolutionType.HAPPINESS_NIGHT, EvolutionType.LEVEL,
+            EvolutionType.TRADE, EvolutionType.TRADE_ITEM, EvolutionType.STONE, EvolutionType.LEVEL_ATTACK_HIGHER,
+            EvolutionType.LEVEL_ATK_DEF_SAME, EvolutionType.LEVEL_DEFENSE_HIGHER, EvolutionType.LEVEL_LOW_PV,
+            EvolutionType.LEVEL_HIGH_PV, EvolutionType.LEVEL_CREATE_EXTRA, EvolutionType.LEVEL_IS_EXTRA,
+            EvolutionType.LEVEL_HIGH_BEAUTY, EvolutionType.STONE_MALE_ONLY, EvolutionType.STONE_FEMALE_ONLY,
+            EvolutionType.LEVEL_ITEM_DAY, EvolutionType.LEVEL_ITEM_NIGHT, EvolutionType.LEVEL_WITH_MOVE,
+            EvolutionType.LEVEL_WITH_OTHER, EvolutionType.LEVEL_MALE_ONLY, EvolutionType.LEVEL_FEMALE_ONLY,
+            EvolutionType.LEVEL_ELECTRIFIED_AREA, EvolutionType.LEVEL_MOSS_ROCK, EvolutionType.LEVEL_ICY_ROCK
+    };
+
+    public static int evolutionTypeToIndex(EvolutionType evolutionType) {
+        for (int i = 0; i < evolutionTypeTable.length; i++) {
+            if (evolutionType == evolutionTypeTable[i]) {
+                return i + 1;
+            }
+        }
+        return -1;
+    }
+
+    public static EvolutionType evolutionTypeFromIndex(int index) {
+        if (index == -1) {
+            return EvolutionType.NONE;
+        }
+        return evolutionTypeTable[index - 1];
+    }
+
     public static int getFormeCount(int romType) {
         if (romType == Type_DP) {
             return dpFormeCount;
@@ -1600,18 +1545,18 @@ public class Gen4Constants {
 
     private static Map<Integer,String> setupFormeSuffixes() {
         Map<Integer,String> formeSuffixes = new HashMap<>();
-        formeSuffixes.put(Species.Gen4Formes.deoxysA + formeOffset,"-A");
-        formeSuffixes.put(Species.Gen4Formes.deoxysD + formeOffset,"-D");
-        formeSuffixes.put(Species.Gen4Formes.deoxysS + formeOffset,"-S");
-        formeSuffixes.put(Species.Gen4Formes.wormadamS + formeOffset,"-S");
-        formeSuffixes.put(Species.Gen4Formes.wormadamT + formeOffset,"-T");
-        formeSuffixes.put(Species.Gen4Formes.giratinaO + formeOffset,"-O");
-        formeSuffixes.put(Species.Gen4Formes.shayminS + formeOffset,"-S");
-        formeSuffixes.put(Species.Gen4Formes.rotomH + formeOffset,"-H");
-        formeSuffixes.put(Species.Gen4Formes.rotomW + formeOffset,"-W");
-        formeSuffixes.put(Species.Gen4Formes.rotomFr + formeOffset,"-Fr");
-        formeSuffixes.put(Species.Gen4Formes.rotomFa + formeOffset,"-Fa");
-        formeSuffixes.put(Species.Gen4Formes.rotomM + formeOffset,"-M");
+        formeSuffixes.put(Species.Gen4Formes.deoxysA + formeOffset,"-Attack");
+        formeSuffixes.put(Species.Gen4Formes.deoxysD + formeOffset,"-Defense");
+        formeSuffixes.put(Species.Gen4Formes.deoxysS + formeOffset,"-Speed");
+        formeSuffixes.put(Species.Gen4Formes.wormadamS + formeOffset,"-Sandy");
+        formeSuffixes.put(Species.Gen4Formes.wormadamT + formeOffset,"-Trash");
+        formeSuffixes.put(Species.Gen4Formes.giratinaO + formeOffset,"-Origin");
+        formeSuffixes.put(Species.Gen4Formes.shayminS + formeOffset,"-Sky");
+        formeSuffixes.put(Species.Gen4Formes.rotomH + formeOffset,"-Heat");
+        formeSuffixes.put(Species.Gen4Formes.rotomW + formeOffset,"-Wash");
+        formeSuffixes.put(Species.Gen4Formes.rotomFr + formeOffset,"-Frost");
+        formeSuffixes.put(Species.Gen4Formes.rotomFa + formeOffset,"-Fan");
+        formeSuffixes.put(Species.Gen4Formes.rotomM + formeOffset,"-Mow");
         return formeSuffixes;
     }
 
@@ -1721,233 +1666,6 @@ public class Gen4Constants {
         m.put(255,0);
         return m;
     }
-
-    public static int[] dpPostGameEncounterAreas = new int[] {
-            530, 531, 532, 533, //Resort Area
-            492, 493, 494, 495, 496, 497, //Route 224
-            498, 499, 500, 501, 502, 503, //Route 225
-            542, 543, 544, 545, 546, 547, //Route 226
-            504, 505, 506, 507, 508, 509, //Route 227
-            510, 511, 512, 513, 514, 515, //Route 228
-            516, 517, 518, 519, 520, 521, //Route 229
-            548, 549, 550, 551, 552, 553, //Route 230
-            178, 179, 180, 181, 182, 183, //Stark Mountain
-            184, 185, 186, 187, 188, 189, //Sendoff Spring
-            196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207,
-            208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219,
-            220, 221, 222, 223, 224, 225, 226, 227, 228, 229, //Turnback Cave
-            282, 283, 284, 285, 286, 287, 288, 289, 290, 291, 292, 293, //Snowpoint Temple
-            3, 7, 11, 15, 19, 29, 37, 43, 57, 75, 81, 87, 93, 99, 107,
-            153, 159, 169, 177, 309, 345, 351, 357, 363, 377, 383, 389,
-            395, 401, 411, 417, 435, 445, 451, 457, 463, 475, 479, 485,
-            491, 525, 529, 537, 541, //Super Rod
-            21, 23, 25, 31, 33, 39, 45, 47, 49, 51, 53, 59, 61, 63, 65,
-            67, 69, 71, 77, 83, 89, 95, 101, 103, 109, 111, 113, 115, 117,
-            119, 121, 123, 125, 127, 129, 131, 133, 135, 137, 139, 141,
-            143, 145, 147, 149, 155, 161, 163, 165, 171, 173, 295, 297,
-            299, 301, 303, 305, 311, 313, 315, 317, 319, 321, 323, 325,
-            327, 329, 331, 333, 335, 337, 339, 341, 347, 353, 359, 365,
-            367, 369, 371, 373, 379, 385, 391, 397, 403, 405, 407, 413,
-            419, 421, 423, 425, 427, 429, 431, 437, 439, 441, 447, 453,
-            459, 465, 467, 469, 471, 481, 487, //Swarm/Radar/GBA
-            558, //Trophy Garden Rotating Pokemon
-            559, //Great Marsh Rotating Pokemon (Post-National Dex)
-            154, 156, 157, 158, 160, 162, //Victory Road (back)
-            190, 191, 192, 193, 194, 195, 230, 231, 232, 233, 234, 235,
-            236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247,
-            248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259,
-            260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271,
-            272, 273, 274, 275, 276, 277, 278, 279, 280, 281 //Unknown areas - likely unused
-    };
-
-    public static int[] platPostGameEncounterAreas = new int[] {
-            534, 535, 536, 537, //Resort Area
-            496, 497, 498, 499, 500, 501, //Route 224
-            502, 503, 504, 505, 506, 507, //Route 225
-            546, 547, 548, 549, 550, 551, //Route 226
-            508, 509, 510, 511, 512, 513, //Route 227
-            514, 515, 516, 517, 518, 519, //Route 228
-            520, 521, 522, 523, 524, 525, //Route 229
-            552, 553, 554, 555, 556, 557, //Route 230
-            182, 183, 184, 185, 186, 187, //Stark Mountain
-            200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211,
-            212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223,
-            224, 225, 226, 227, 228, 229, 230, 231, 232, 233, //Turnback Cave
-            286, 287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, //Snowpoint Temple
-            3, 7, 11, 15, 19, 29, 37, 43, 57, 75, 81, 87, 93, 99, 105,
-            111, 157, 163, 173, 181, 193, 313, 349, 355, 361, 367, 381,
-            387, 393, 399, 405, 415, 421, 439, 449, 455, 461, 467, 479,
-            483, 489, 495, 529, 533, 541, 545, //Super Rod
-            21, 23, 25, 31, 33, 39, 45, 47, 49, 51, 53, 59, 61, 63, 65,
-            67, 69, 71, 77, 83, 89, 95, 101, 107, 113, 115, 117, 119, 121,
-            123, 125, 127, 129, 131, 133, 135, 137, 139, 141, 143, 145,
-            147, 149, 151, 153, 159, 165, 167, 169, 175, 177, 189, 299,
-            301, 303, 305, 307, 309, 315, 317, 319, 321, 323, 325, 327,
-            329, 331, 333, 335, 337, 339, 341, 343, 345, 351, 357, 363,
-            369, 371, 373, 375, 377, 383, 389, 395, 401, 407, 409, 411,
-            417, 423, 425, 427, 429, 431, 433, 435, 441, 443, 445, 451,
-            457, 463, 469, 471, 473, 475, 485, 491, //Swarm/Radar/GBA
-            562, //Trophy Garden Rotating Pokemon
-            563, //Great Marsh Rotating Pokemon (Post-National Dex)
-            158, 160, 161, 162, 164, 166, //back of Victory Road
-            194, 195, 196, 197, 198, 199, 234, 235, 236, 237, 238, 239,
-            240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251,
-            252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263,
-            264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275,
-            276, 277, 278, 279, 280, 281, 282, 283, 284, 285 //Unknown areas - probably unused
-    };
-
-    public static int[] hgssPostGameEncounterAreasTOD = new int[] {
-            676, 677, 678, 679, 680, 681, 682, 1051, //Pallet Town
-            683, 684, 685, 686, 687, 688, 689, 1052, //Viridian City
-            1053, //Pewter City
-            690, 691, 692, 693, 694, 695, 696, 1054, //Cerulean City
-            697, 698, 699, 700, 701, 702, 703, 704, 1055, //Vermilion City
-            705, 706, 1056, //Celadon City
-            707, 708, 709, 710, 711, 712, 713, 1057, //Fuchsia City
-            785, 786, 787, 788, 789, 1016, //Route 1
-            790, 791, 792, 793, 794, 971, 972, 973, 974, 975, 1017, 1072, //Route 2
-            795, 796, 797, 798, 799, 1018, //Route 3
-            800, 801, 802, 803, 804, 805, 806, 807, 808, 809, 810, 1019, //Route 4
-            811, 812, 813, 814, 815, 1020, //Route 5
-            816, 817, 818, 819, 820, 821, 822, 823, 824, 825, 826, 1021, //Route 6
-            827, 828, 829, 830, 831, 1022, //Route 7
-            832, 833, 834, 835, 836, 1023, //Route 8
-            837, 838, 839, 840, 841, 842, 843, 844, 845, 846, 847, //Route 9
-            848, 849, 850, 851, 852, 853, 854, 855, 856, 857, 858, //Route 10
-            859, 860, 861, 862, 863, 1024, //Route 11
-            654, 655, 656, 657, 658, 659, 660, 1025, //Route 12
-            864, 865, 866, 867, 868, 869, 870, 871, 872, 873, 874, 1026, //Route 13
-            875, 876, 877, 878, 879, 1027, //Route 14
-            880, 881, 882, 883, 884, 1028, //Route 15
-            885, 886, 887, 888, 889, 1073, //Route 16
-            890, 891, 892, 893, 894, //Route 17
-            895, 896, 897, 898, 899, 1029, //Route 18
-            661, 662, 663, 664, 665, 666, 667, 668, //Route 19
-            669, 670, 671, 672, 673, 674, 675, //Route 20
-            900, 901, 902, 903, 904, 905, 906, 907, 908, 909, 910, 1065, //Route 21
-            911, 912, 913, 914, 915, 916, 917, 918, 919, 920, 921, 1030, //Route 22
-            922, 923, 924, 925, 926, 927, 928, 929, 930, 931, 932, //Route 24
-            933, 934, 935, 936, 937, 938, 939, 940, 941, 942, 943, 1031, //Route 25
-            714, 715, 716, 717, 718, 719, 720, //Cinnabar Island
-            981, 982, 983, 984, 985, 986, 987, 988, 989, 990, 991, 992, 993,
-            994, 995, 996, 997, 998, 999, 1000, 1001, 1002, 1003, 1004, 1005,
-            1006, 1007, 1008, 1009, 1010, 1011, 1012, 1013, 1014, 1015, //Cerulean Cave
-            955, 956, 957, 958, 959, //DIGLETT’s Cave
-            769, 770, 771, 772, 773, 774, 775, 776, 777, 778, 779, //Rock Tunnel
-            518, 519, 520, 521, 522, 523, 524, 525, 526, 527, 528, 529, 530,
-            531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 541, 542, 543,
-            544, 545, 546, 547, 548, //Seafoam Islands
-            976, 977, 978, 979, 980, 1068, //Viridian Forest
-            504, 505, 506, 507, 508, 509, 510, 511, 512, 513, 514, 515, 516,
-            517, 759, 760, 761, 762, 763, 764, 765, 766, 767, 768, //Mt. Moon
-            748, 749, 750, 751, 752, 753, 754, 755, 756, 757, 758, 1034, //Route 28
-            549, 550, 551, 552, 553, 554, 555, 556, 557, 558, 559, 560, 561,
-            562, 563, 564, 565, 566, 567, 568, 569, 570, 571, 572, 573, 574,
-            575, 576, 577, 578, 579, 580, 581, 600, 601, 602, 603, 604, 605,
-            606, 607, 608, 609, 610, 611, 612, 613, 614, 615, 616, 617, 618,
-            619, 620, 621, 622, 623, 624, 625, 626, 627, 628, 629, 630, 631,
-            632, 633, 634, 635, 636, 637, 638, 639, 640, 641, 642, 1064, 1074, //Mt. Silver
-            593, //Cliff Cave Rock Smash
-            3, 15, 26, 37, 44, 65, 77, 108, 119, 130, 146, 157, 168, 179, 190,
-            217, 284, 291, 298, 309, 325, 338, 349, 360, 376, 387, 398, 405,
-            416, 443, 450, 461, 478, 489, 500, 585, 650, 733, 744, 951, //Super Rod
-            4, 6, 11, 16, 18, 27, 29, 38, 40, 45, 47, 52, 57, 66, 68, 78, 80,
-            85, 90, 95, 100, 109, 111, 120, 122, 131, 133, 138, 147, 149, 158,
-            160, 169, 171, 180, 182, 191, 193, 198, 203, 208, 213, 218, 220,
-            225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285,
-            287, 292, 294, 299, 301, 310, 312, 317, 326, 328, 333, 339, 341,
-            350, 352, 361, 363, 368, 377, 379, 388, 390, 399, 401, 406, 408,
-            417, 419, 424, 429, 434, 439, 444, 446, 451, 453, 462, 464, 469,
-            479, 481, 490, 492, 501, 503, 586, 588, 594, 599, 651, 653, 725,
-            734, 736, 745, 747, 784, 952, 954, 964, 970, //Swarm
-            10, 22, 33, 51, 56, 61, 72, 84, 89, 94, 99, 104, 115, 126, 137,
-            142, 153, 164, 175, 186, 197, 202, 207, 212, 224, 229, 234, 239,
-            244, 249, 254, 259, 264, 269, 274, 279, 305, 316, 321, 332, 345,
-            356, 367, 372, 383, 394, 412, 423, 428, 433, 438, 457, 468, 473,
-            485, 496, 592, 598, 646, 724, 729, 740, 783, 947, 963, 968, //Radio
-            1076, 1077, 1078, //Post-National Dex Bug-Catching Contests
-            643, 644, 645, 647, 648, 649, 652, 1071 //Safari Zone - unused?
-    };
-
-    public static int[] hgssPostGameSpecialCasesTOD = new int[] {
-            1044, 1059, 1066 //headbutt trees - mixed
-    };
-
-    public static int[] hgssPostGameEncounterAreasNoTOD = new int[] {
-            532, 533, 534, 535, 536, 537, 538, 829, //Pallet Town
-            539, 540, 541, 542, 543, 544, 545, 830, //Viridian City
-            831, //Pewter City
-            546, 547, 548, 549, 550, 551, 552, 832, //Cerulean City
-            553, 554, 555, 556, 557, 558, 559, 560, 833, //Vermilion City
-            561, 562, 834, //Celadon City
-            563, 564, 565, 566, 567, 568, 569, 835, //Fuchsia City
-            623, 624, 625, 794, //Route 1
-            626, 627, 628, 759, 760, 761, 795, 850, //Route 2
-            629, 630, 631, 796, //Route 3
-            632, 633, 634, 635, 636, 637, 638, 639, 640, 797, //Route 4
-            641, 642, 643, 798, //Route 5
-            644, 645, 646, 647, 648, 649, 650, 651, 652, 799, //Route 6
-            653, 654, 655, 800, //Route 7
-            656, 657, 658, 801, //Route 8
-            659, 660, 661, 662, 663, 664, 665, 666, 667, //Route 9
-            668, 669, 670, 671, 672, 673, 674, 675, 676, //Route 10
-            677, 678, 679, 802, //Route 11
-            510, 511, 512, 513, 514, 515, 516, 803, //Route 12
-            680, 681, 682, 683, 684, 685, 686, 687, 688, 804, //Route 13
-            689, 690, 691, 805, //Route 14
-            692, 693, 694, 806, //Route 15
-            695, 696, 697, 851, //Route 16
-            698, 699, 700, //Route 17
-            701, 702, 703, 807, //Route 18
-            517, 518, 519, 520, 521, 522, 523, 524, //Route 19
-            525, 526, 527, 528, 529, 530, 531, //Route 20
-            704, 705, 706, 707, 708, 709, 710, 711, 712, 843, //Route 21
-            713, 714, 715, 716, 717, 718, 719, 720, 721, 808, //Route 22
-            722, 723, 724, 725, 726, 727, 728, 729, 730, //Route 24
-            731, 732, 733, 734, 735, 736, 737, 738, 739, 809, //Route 25
-            570, 571, 572, 573, 574, 575, 576, //Cinnabar Island
-            765, 766, 767, 768, 769, 770, 771, 772, 773, 774, 775, 776, 777,
-            778, 779, 780, 781, 782, 783, 784, 785, 786, 787, 788, 789, 790,
-            791, 792, 793, //Cerulean Cave
-            749, 750, 751, //DIGLETT’s Cave
-            613, 614, 615, 616, 617, 618, 619, //Rock Tunnel
-            406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418,
-            419, 420, 421, 422, 423, 424, 425, 426, //Seafoam Islands
-            762, 763, 764, 846, //Viridian Forest
-            392, 393, 394, 395, 396, 397, 398, 399, 400, 401, 402, 403, 404,
-            405, 607, 608, 609, 610, 611, 612, //Mt. Moon
-            598, 599, 600, 601, 602, 603, 604, 605, 606, 812, //Route 28
-            427, 428, 429, 430, 431, 432, 433, 434, 435, 436, 437, 438, 439,
-            440, 441, 442, 443, 444, 445, 446, 447, 448, 449, 450, 451, 452,
-            453, 468, 469, 470, 471, 472, 473, 474, 475, 476, 477, 478, 479,
-            480, 481, 482, 483, 484, 485, 486, 487, 488, 489, 490, 491, 492,
-            493, 494, 495, 496, 497, 498, 499, 500, 842, 852, //Mt. Silver
-            463, //Cliff Cave Rock Smash
-            3, 13, 22, 31, 38, 53, 63, 84, 93, 102, 114, 123, 132, 141, 150,
-            169, 212, 219, 226, 235, 247, 258, 267, 276, 288, 297, 306, 313,
-            322, 341, 348, 357, 370, 379, 388, 457, 506, 585, 594, 745, //Super Rod
-            4, 6, 9, 14, 16, 23, 25, 32, 34, 39, 41, 44, 47, 54, 56, 64, 66,
-            69, 72, 75, 78, 85, 87, 94, 96, 103, 105, 108, 115, 117, 124, 126,
-            133, 135, 142, 144, 151, 153, 156, 159, 162, 165, 170, 172, 175,
-            178, 181, 184, 187, 190, 193, 196, 199, 202, 205, 208, 213, 215,
-            220, 222, 227, 229, 236, 238, 241, 248, 250, 253, 259, 261, 268,
-            270, 277, 279, 282, 289, 291, 298, 300, 307, 309, 314, 316, 323,
-            325, 328, 331, 334, 337, 342, 344, 349, 351, 358, 360, 363, 371,
-            373, 380, 382, 389, 391, 458, 460, 464, 467, 507, 509, 579, 586,
-            588, 595, 597, 622, 746, 748, 754, 758, //Swarm
-            8, 18, 27, 43, 46, 49, 58, 68, 71, 74, 77, 80, 89, 98, 107, 110,
-            119, 128, 137, 146, 155, 158, 161, 164, 174, 177, 180, 183, 186,
-            189, 192, 195, 198, 201, 204, 207, 231, 240, 243, 252, 263, 272,
-            281, 284, 293, 302, 318, 327, 330, 333, 336, 353, 362, 365, 375,
-            384, 462, 466, 502, 578, 581, 590, 621, 741, 753, 756, //Radio
-            854, 855, 856, //Post-National Dex Bug-Catching Contests
-            501, 503, 504, 505, 508, 849, //Safari Zone - unused?
-    };
-
-    public static int[] hgssPostGameSpecialCasesNoTOD = new int[] {
-            822, 837, 844 //headbutt trees - mixed
-    };
 
     public static void tagTrainersDP(List<Trainer> trs) {
         // Gym Trainers
@@ -2378,6 +2096,620 @@ public class Gen4Constants {
                 allTrainers.get(num - 1).multiBattleStatus = status;
             }
         }
+    }
+
+    private static final int[] dpPostGameEncounterAreas = new int[] {
+            530, 531, 532, 533, //Resort Area
+            492, 493, 494, 495, 496, 497, //Route 224
+            498, 499, 500, 501, 502, 503, //Route 225
+            542, 543, 544, 545, 546, 547, //Route 226
+            504, 505, 506, 507, 508, 509, //Route 227
+            510, 511, 512, 513, 514, 515, //Route 228
+            516, 517, 518, 519, 520, 521, //Route 229
+            548, 549, 550, 551, 552, 553, //Route 230
+            178, 179, 180, 181, 182, 183, //Stark Mountain
+            184, 185, 186, 187, 188, 189, //Sendoff Spring
+            196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207,
+            208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219,
+            220, 221, 222, 223, 224, 225, 226, 227, 228, 229, //Turnback Cave
+            282, 283, 284, 285, 286, 287, 288, 289, 290, 291, 292, 293, //Snowpoint Temple
+            3, 7, 11, 15, 19, 29, 37, 43, 57, 75, 81, 87, 93, 99, 107,
+            153, 159, 169, 177, 309, 345, 351, 357, 363, 377, 383, 389,
+            395, 401, 411, 417, 435, 445, 451, 457, 463, 475, 479, 485,
+            491, 525, 529, 537, 541, //Super Rod
+            21, 23, 25, 31, 33, 39, 45, 47, 49, 51, 53, 59, 61, 63, 65,
+            67, 69, 71, 77, 83, 89, 95, 101, 103, 109, 111, 113, 115, 117,
+            119, 121, 123, 125, 127, 129, 131, 133, 135, 137, 139, 141,
+            143, 145, 147, 149, 155, 161, 163, 165, 171, 173, 295, 297,
+            299, 301, 303, 305, 311, 313, 315, 317, 319, 321, 323, 325,
+            327, 329, 331, 333, 335, 337, 339, 341, 347, 353, 359, 365,
+            367, 369, 371, 373, 379, 385, 391, 397, 403, 405, 407, 413,
+            419, 421, 423, 425, 427, 429, 431, 437, 439, 441, 447, 453,
+            459, 465, 467, 469, 471, 481, 487, //Swarm/Radar/GBA
+            558, //Trophy Garden Rotating Pokemon
+            559, //Great Marsh Rotating Pokemon (Post-National Dex)
+            154, 156, 157, 158, 160, 162, //Victory Road (back)
+            190, 191, 192, 193, 194, 195, 230, 231, 232, 233, 234, 235,
+            236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247,
+            248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259,
+            260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271,
+            272, 273, 274, 275, 276, 277, 278, 279, 280, 281 //Unknown areas - likely unused
+    };
+
+    private static final int[] platPostGameEncounterAreas = new int[] {
+            534, 535, 536, 537, //Resort Area
+            496, 497, 498, 499, 500, 501, //Route 224
+            502, 503, 504, 505, 506, 507, //Route 225
+            546, 547, 548, 549, 550, 551, //Route 226
+            508, 509, 510, 511, 512, 513, //Route 227
+            514, 515, 516, 517, 518, 519, //Route 228
+            520, 521, 522, 523, 524, 525, //Route 229
+            552, 553, 554, 555, 556, 557, //Route 230
+            182, 183, 184, 185, 186, 187, //Stark Mountain
+            200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211,
+            212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223,
+            224, 225, 226, 227, 228, 229, 230, 231, 232, 233, //Turnback Cave
+            286, 287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, //Snowpoint Temple
+            3, 7, 11, 15, 19, 29, 37, 43, 57, 75, 81, 87, 93, 99, 105,
+            111, 157, 163, 173, 181, 193, 313, 349, 355, 361, 367, 381,
+            387, 393, 399, 405, 415, 421, 439, 449, 455, 461, 467, 479,
+            483, 489, 495, 529, 533, 541, 545, //Super Rod
+            21, 23, 25, 31, 33, 39, 45, 47, 49, 51, 53, 59, 61, 63, 65,
+            67, 69, 71, 77, 83, 89, 95, 101, 107, 113, 115, 117, 119, 121,
+            123, 125, 127, 129, 131, 133, 135, 137, 139, 141, 143, 145,
+            147, 149, 151, 153, 159, 165, 167, 169, 175, 177, 189, 299,
+            301, 303, 305, 307, 309, 315, 317, 319, 321, 323, 325, 327,
+            329, 331, 333, 335, 337, 339, 341, 343, 345, 351, 357, 363,
+            369, 371, 373, 375, 377, 383, 389, 395, 401, 407, 409, 411,
+            417, 423, 425, 427, 429, 431, 433, 435, 441, 443, 445, 451,
+            457, 463, 469, 471, 473, 475, 485, 491, //Swarm/Radar/GBA
+            562, //Trophy Garden Rotating Pokemon
+            563, //Great Marsh Rotating Pokemon (Post-National Dex)
+            158, 160, 161, 162, 164, 166, //back of Victory Road
+            194, 195, 196, 197, 198, 199, 234, 235, 236, 237, 238, 239,
+            240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251,
+            252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263,
+            264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275,
+            276, 277, 278, 279, 280, 281, 282, 283, 284, 285 //Unknown areas - probably unused
+    };
+
+    private static final int[] hgssPostGameEncounterAreasTOD = new int[] {
+            676, 677, 678, 679, 680, 681, 682, 1051, //Pallet Town
+            683, 684, 685, 686, 687, 688, 689, 1052, //Viridian City
+            1053, //Pewter City
+            690, 691, 692, 693, 694, 695, 696, 1054, //Cerulean City
+            697, 698, 699, 700, 701, 702, 703, 704, 1055, //Vermilion City
+            705, 706, 1056, //Celadon City
+            707, 708, 709, 710, 711, 712, 713, 1057, //Fuchsia City
+            785, 786, 787, 788, 789, 1016, //Route 1
+            790, 791, 792, 793, 794, 971, 972, 973, 974, 975, 1017, 1072, //Route 2
+            795, 796, 797, 798, 799, 1018, //Route 3
+            800, 801, 802, 803, 804, 805, 806, 807, 808, 809, 810, 1019, //Route 4
+            811, 812, 813, 814, 815, 1020, //Route 5
+            816, 817, 818, 819, 820, 821, 822, 823, 824, 825, 826, 1021, //Route 6
+            827, 828, 829, 830, 831, 1022, //Route 7
+            832, 833, 834, 835, 836, 1023, //Route 8
+            837, 838, 839, 840, 841, 842, 843, 844, 845, 846, 847, //Route 9
+            848, 849, 850, 851, 852, 853, 854, 855, 856, 857, 858, //Route 10
+            859, 860, 861, 862, 863, 1024, //Route 11
+            654, 655, 656, 657, 658, 659, 660, 1025, //Route 12
+            864, 865, 866, 867, 868, 869, 870, 871, 872, 873, 874, 1026, //Route 13
+            875, 876, 877, 878, 879, 1027, //Route 14
+            880, 881, 882, 883, 884, 1028, //Route 15
+            885, 886, 887, 888, 889, 1073, //Route 16
+            890, 891, 892, 893, 894, //Route 17
+            895, 896, 897, 898, 899, 1029, //Route 18
+            661, 662, 663, 664, 665, 666, 667, 668, //Route 19
+            669, 670, 671, 672, 673, 674, 675, //Route 20
+            900, 901, 902, 903, 904, 905, 906, 907, 908, 909, 910, 1065, //Route 21
+            911, 912, 913, 914, 915, 916, 917, 918, 919, 920, 921, 1030, //Route 22
+            922, 923, 924, 925, 926, 927, 928, 929, 930, 931, 932, //Route 24
+            933, 934, 935, 936, 937, 938, 939, 940, 941, 942, 943, 1031, //Route 25
+            714, 715, 716, 717, 718, 719, 720, //Cinnabar Island
+            981, 982, 983, 984, 985, 986, 987, 988, 989, 990, 991, 992, 993,
+            994, 995, 996, 997, 998, 999, 1000, 1001, 1002, 1003, 1004, 1005,
+            1006, 1007, 1008, 1009, 1010, 1011, 1012, 1013, 1014, 1015, //Cerulean Cave
+            955, 956, 957, 958, 959, //DIGLETT’s Cave
+            769, 770, 771, 772, 773, 774, 775, 776, 777, 778, 779, //Rock Tunnel
+            518, 519, 520, 521, 522, 523, 524, 525, 526, 527, 528, 529, 530,
+            531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 541, 542, 543,
+            544, 545, 546, 547, 548, //Seafoam Islands
+            976, 977, 978, 979, 980, 1068, //Viridian Forest
+            504, 505, 506, 507, 508, 509, 510, 511, 512, 513, 514, 515, 516,
+            517, 759, 760, 761, 762, 763, 764, 765, 766, 767, 768, //Mt. Moon
+            748, 749, 750, 751, 752, 753, 754, 755, 756, 757, 758, 1034, //Route 28
+            549, 550, 551, 552, 553, 554, 555, 556, 557, 558, 559, 560, 561,
+            562, 563, 564, 565, 566, 567, 568, 569, 570, 571, 572, 573, 574,
+            575, 576, 577, 578, 579, 580, 581, 600, 601, 602, 603, 604, 605,
+            606, 607, 608, 609, 610, 611, 612, 613, 614, 615, 616, 617, 618,
+            619, 620, 621, 622, 623, 624, 625, 626, 627, 628, 629, 630, 631,
+            632, 633, 634, 635, 636, 637, 638, 639, 640, 641, 642, 1064, 1074, //Mt. Silver
+            593, //Cliff Cave Rock Smash
+            3, 15, 26, 37, 44, 65, 77, 108, 119, 130, 146, 157, 168, 179, 190,
+            217, 284, 291, 298, 309, 325, 338, 349, 360, 376, 387, 398, 405,
+            416, 443, 450, 461, 478, 489, 500, 585, 650, 733, 744, 951, //Super Rod
+            4, 6, 11, 16, 18, 27, 29, 38, 40, 45, 47, 52, 57, 66, 68, 78, 80,
+            85, 90, 95, 100, 109, 111, 120, 122, 131, 133, 138, 147, 149, 158,
+            160, 169, 171, 180, 182, 191, 193, 198, 203, 208, 213, 218, 220,
+            225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285,
+            287, 292, 294, 299, 301, 310, 312, 317, 326, 328, 333, 339, 341,
+            350, 352, 361, 363, 368, 377, 379, 388, 390, 399, 401, 406, 408,
+            417, 419, 424, 429, 434, 439, 444, 446, 451, 453, 462, 464, 469,
+            479, 481, 490, 492, 501, 503, 586, 588, 594, 599, 651, 653, 725,
+            734, 736, 745, 747, 784, 952, 954, 964, 970, //Swarm
+            10, 22, 33, 51, 56, 61, 72, 84, 89, 94, 99, 104, 115, 126, 137,
+            142, 153, 164, 175, 186, 197, 202, 207, 212, 224, 229, 234, 239,
+            244, 249, 254, 259, 264, 269, 274, 279, 305, 316, 321, 332, 345,
+            356, 367, 372, 383, 394, 412, 423, 428, 433, 438, 457, 468, 473,
+            485, 496, 592, 598, 646, 724, 729, 740, 783, 947, 963, 968, //Radio
+            1076, 1077, 1078, //Post-National Dex Bug-Catching Contests
+            643, 644, 645, 647, 648, 649, 652, 1071 //Safari Zone - unused?
+    };
+
+    private static final int[] hgssPartialPostGameTOD = new int[] {
+            1044, 1059, 1066 //headbutt trees
+    };
+
+    private static final int[] hgssPostGameEncounterAreasNoTOD = new int[] {
+            532, 533, 534, 535, 536, 537, 538, 829, //Pallet Town
+            539, 540, 541, 542, 543, 544, 545, 830, //Viridian City
+            831, //Pewter City
+            546, 547, 548, 549, 550, 551, 552, 832, //Cerulean City
+            553, 554, 555, 556, 557, 558, 559, 560, 833, //Vermilion City
+            561, 562, 834, //Celadon City
+            563, 564, 565, 566, 567, 568, 569, 835, //Fuchsia City
+            623, 624, 625, 794, //Route 1
+            626, 627, 628, 759, 760, 761, 795, 850, //Route 2
+            629, 630, 631, 796, //Route 3
+            632, 633, 634, 635, 636, 637, 638, 639, 640, 797, //Route 4
+            641, 642, 643, 798, //Route 5
+            644, 645, 646, 647, 648, 649, 650, 651, 652, 799, //Route 6
+            653, 654, 655, 800, //Route 7
+            656, 657, 658, 801, //Route 8
+            659, 660, 661, 662, 663, 664, 665, 666, 667, //Route 9
+            668, 669, 670, 671, 672, 673, 674, 675, 676, //Route 10
+            677, 678, 679, 802, //Route 11
+            510, 511, 512, 513, 514, 515, 516, 803, //Route 12
+            680, 681, 682, 683, 684, 685, 686, 687, 688, 804, //Route 13
+            689, 690, 691, 805, //Route 14
+            692, 693, 694, 806, //Route 15
+            695, 696, 697, 851, //Route 16
+            698, 699, 700, //Route 17
+            701, 702, 703, 807, //Route 18
+            517, 518, 519, 520, 521, 522, 523, 524, //Route 19
+            525, 526, 527, 528, 529, 530, 531, //Route 20
+            704, 705, 706, 707, 708, 709, 710, 711, 712, 843, //Route 21
+            713, 714, 715, 716, 717, 718, 719, 720, 721, 808, //Route 22
+            722, 723, 724, 725, 726, 727, 728, 729, 730, //Route 24
+            731, 732, 733, 734, 735, 736, 737, 738, 739, 809, //Route 25
+            570, 571, 572, 573, 574, 575, 576, //Cinnabar Island
+            765, 766, 767, 768, 769, 770, 771, 772, 773, 774, 775, 776, 777,
+            778, 779, 780, 781, 782, 783, 784, 785, 786, 787, 788, 789, 790,
+            791, 792, 793, //Cerulean Cave
+            749, 750, 751, //DIGLETT’s Cave
+            613, 614, 615, 616, 617, 618, 619, //Rock Tunnel
+            406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418,
+            419, 420, 421, 422, 423, 424, 425, 426, //Seafoam Islands
+            762, 763, 764, 846, //Viridian Forest
+            392, 393, 394, 395, 396, 397, 398, 399, 400, 401, 402, 403, 404,
+            405, 607, 608, 609, 610, 611, 612, //Mt. Moon
+            598, 599, 600, 601, 602, 603, 604, 605, 606, 812, //Route 28
+            427, 428, 429, 430, 431, 432, 433, 434, 435, 436, 437, 438, 439,
+            440, 441, 442, 443, 444, 445, 446, 447, 448, 449, 450, 451, 452,
+            453, 468, 469, 470, 471, 472, 473, 474, 475, 476, 477, 478, 479,
+            480, 481, 482, 483, 484, 485, 486, 487, 488, 489, 490, 491, 492,
+            493, 494, 495, 496, 497, 498, 499, 500, 842, 852, //Mt. Silver
+            463, //Cliff Cave Rock Smash
+            3, 13, 22, 31, 38, 53, 63, 84, 93, 102, 114, 123, 132, 141, 150,
+            169, 212, 219, 226, 235, 247, 258, 267, 276, 288, 297, 306, 313,
+            322, 341, 348, 357, 370, 379, 388, 457, 506, 585, 594, 745, //Super Rod
+            4, 6, 9, 14, 16, 23, 25, 32, 34, 39, 41, 44, 47, 54, 56, 64, 66,
+            69, 72, 75, 78, 85, 87, 94, 96, 103, 105, 108, 115, 117, 124, 126,
+            133, 135, 142, 144, 151, 153, 156, 159, 162, 165, 170, 172, 175,
+            178, 181, 184, 187, 190, 193, 196, 199, 202, 205, 208, 213, 215,
+            220, 222, 227, 229, 236, 238, 241, 248, 250, 253, 259, 261, 268,
+            270, 277, 279, 282, 289, 291, 298, 300, 307, 309, 314, 316, 323,
+            325, 328, 331, 334, 337, 342, 344, 349, 351, 358, 360, 363, 371,
+            373, 380, 382, 389, 391, 458, 460, 464, 467, 507, 509, 579, 586,
+            588, 595, 597, 622, 746, 748, 754, 758, //Swarm
+            8, 18, 27, 43, 46, 49, 58, 68, 71, 74, 77, 80, 89, 98, 107, 110,
+            119, 128, 137, 146, 155, 158, 161, 164, 174, 177, 180, 183, 186,
+            189, 192, 195, 198, 201, 204, 207, 231, 240, 243, 252, 263, 272,
+            281, 284, 293, 302, 318, 327, 330, 333, 336, 353, 362, 365, 375,
+            384, 462, 466, 502, 578, 581, 590, 621, 741, 753, 756, //Radio
+            854, 855, 856, //Post-National Dex Bug-Catching Contests
+            501, 503, 504, 505, 508, 849, //Safari Zone - unused?
+    };
+
+    private static final int[] hgssPartialPostGameNoTOD = new int[] {
+            822, 837, 844 //headbutt trees
+    };
+
+    private static final int headbuttPartialPostgameCutoff = 12;
+
+    private static final List<String> locationTagsDP = initLocationTagsDP();
+
+    private static List<String> initLocationTagsDP() {
+        List<String> tags = new ArrayList<>();
+        addCopies(tags, 4, "CANACLAVE CITY");
+        addCopies(tags, 4, "ETERNA CITY");
+        addCopies(tags, 4, "PASTORIA CITY");
+        addCopies(tags, 4, "SUNYSHORE CITY");
+        addCopies(tags, 4, "POKEMON LEAGUE");
+        addCopies(tags, 4, "OREBURGH MINE");
+        addCopies(tags, 6, "VALLEY WINDWORKS");
+        addCopies(tags, 2, "ETERNA FOREST");
+        addCopies(tags, 6, "FUEGO IRONWORKS");
+        addCopies(tags, 38, "MT. CORONET");
+        addCopies(tags, 32, "GREAT MARSH");
+        addCopies(tags, 36, "SOLACEON RUINS");
+        addCopies(tags, 20, "VICTORY ROAD");
+        addCopies(tags, 6, "RAVAGED PATH");
+        addCopies(tags, 8, "OREBURGH GATE");
+        addCopies(tags, 6, "STARK MOUNTAIN");
+        addCopies(tags, 6, "SENDOFF SPRING");
+        addCopies(tags, 6, "UNKNOWN");
+        addCopies(tags, 34, "TURNBACK CAVE");
+        addCopies(tags, 52, "UNKNOWN");
+        addCopies(tags, 12, "SNOWPOINT TEMPLE");
+        addCopies(tags, 4, "WAYWARD CAVE");
+        addCopies(tags, 6, "MANIAC TUNNEL");
+        addCopies(tags, 2, "TROPHY GARDEN");
+        addCopies(tags, 16, "IRON ISLAND");
+        addCopies(tags, 18, "OLD CHATEAU");
+        addCopies(tags, 12, "LAKE VERITY");
+        addCopies(tags, 6, "LAKE VALOR");
+        addCopies(tags, 6, "LAKE ACUITY");
+        addCopies(tags, 2, "VALOR LAKEFRONT");
+        addCopies(tags, 2, "ACUITY LAKEFRONT");
+        addCopies(tags, 2, "ROUTE 201");
+        addCopies(tags, 2, "ROUTE 202");
+        addCopies(tags, 6, "ROUTE 203");
+        addCopies(tags, 12, "ROUTE 204");
+        addCopies(tags, 12, "ROUTE 205");
+        addCopies(tags, 2, "ROUTE 206");
+        addCopies(tags, 2, "ROUTE 207");
+        addCopies(tags, 6, "ROUTE 208");
+        addCopies(tags, 16, "ROUTE 209");
+        addCopies(tags, 8, "ROUTE 210");
+        addCopies(tags, 4, "ROUTE 211");
+        addCopies(tags, 12, "ROUTE 212");
+        addCopies(tags, 6, "ROUTE 213");
+        addCopies(tags, 6, "ROUTE 214");
+        addCopies(tags, 2, "ROUTE 215");
+        addCopies(tags, 2, "ROUTE 216");
+        addCopies(tags, 2, "ROUTE 217");
+        addCopies(tags, 6, "ROUTE 218");
+        addCopies(tags, 4, "ROUTE 219");
+        addCopies(tags, 6, "ROUTE 221");
+        addCopies(tags, 6, "ROUTE 222");
+        addCopies(tags, 6, "ROUTE 224");
+        addCopies(tags, 6, "ROUTE 225");
+        addCopies(tags, 6, "ROUTE 227");
+        addCopies(tags, 6, "ROUTE 228");
+        addCopies(tags, 6, "ROUTE 229");
+        addCopies(tags, 4, "TWINLEAF TOWN");
+        addCopies(tags, 4, "CELESTIC TOWN");
+        addCopies(tags, 4, "RESORT AREA");
+        addCopies(tags, 4, "ROUTE 220");
+        addCopies(tags, 4, "ROUTE 223");
+        addCopies(tags, 6, "ROUTE 226");
+        addCopies(tags, 6, "ROUTE 230");
+        addCopies(tags, 1, "MT. CORONET");
+        addCopies(tags, 3, "HONEY TREE");
+        addCopies(tags, 1, "TROPHY GARDEN");
+        addCopies(tags, 2, "GREAT MARSH");
+        return Collections.unmodifiableList(tags);
+    }
+
+    private static final List<String> locationTagsPt = initLocationTagsPt();
+
+    private static List<String> initLocationTagsPt() {
+        List<String> locationTags = new ArrayList<>();
+        locationTags.addAll(locationTagsDP.subList(0, 108));
+        locationTags.addAll(List.of("GREAT MARSH", "GREAT MARSH", "GREAT MARSH", "GREAT MARSH"));
+        locationTags.addAll(locationTagsDP.subList(108, 561));
+        return Collections.unmodifiableList(locationTags);
+    }
+
+    private static final List<String> locationTagsNoTimeHGSS = initLocationTagsNoTimeHGSS();
+
+    private static List<String> initLocationTagsNoTimeHGSS() {
+        List<String> tags = new ArrayList<>();
+        addCopies(tags, 7, "NEW BARK TOWN");
+        addCopies(tags, 3, "ROUTE 29");
+        addCopies(tags, 7, "CHERRYGROVE CITY");
+        addCopies(tags, 9, "ROUTE 30");
+        addCopies(tags, 9, "ROUTE 31");
+        addCopies(tags, 7, "VIOLET CITY");
+        addCopies(tags, 6, "SPROUT TOWER");
+        addCopies(tags, 9, "ROUTE 32");
+        addCopies(tags, 22, "RUINS OF ALPH");
+        addCopies(tags, 27, "UNION CAVE");
+        addCopies(tags, 3, "ROUTE 33");
+        addCopies(tags, 18, "SLOWPOKE WELL");
+        addCopies(tags, 9, "ILEX FOREST");
+        addCopies(tags, 9, "ROUTE 34");
+        addCopies(tags, 9, "ROUTE 35");
+        addCopies(tags, 6, "NATIONAL PARK");
+        addCopies(tags, 3, "ROUTE 36");
+        addCopies(tags, 3, "ROUTE 37");
+        addCopies(tags, 7, "ECRUTEAK CITY");
+        addCopies(tags, 6, "BURNED TOWER");
+        addCopies(tags, 24, "BELL TOWER");
+        addCopies(tags, 3, "ROUTE 38");
+        addCopies(tags, 3, "ROUTE 39");
+        addCopies(tags, 7, "OLIVINE CITY");
+        addCopies(tags, 7, "ROUTE 40");
+        addCopies(tags, 7, "ROUTE 41");
+        addCopies(tags, 24, "WHIRL ISLANDS");
+        addCopies(tags, 8, "CIANWOOD CITY");
+        addCopies(tags, 9, "ROUTE 42");
+        addCopies(tags, 30, "MT. MORTAR");
+        addCopies(tags, 9, "ROUTE 43");
+        addCopies(tags, 7, "LAKE OF RAGE");
+        addCopies(tags, 9, "ROUTE 44");
+        addCopies(tags, 12, "ICE PATH");
+        addCopies(tags, 7, "BLACKTHORN CITY");
+        addCopies(tags, 7, "DRAGON'S DEN");
+        addCopies(tags, 9, "ROUTE 45");
+        addCopies(tags, 3, "ROUTE 46");
+        addCopies(tags, 19, "DARK CAVE");
+        addCopies(tags, 9, "ROUTE 47");
+        addCopies(tags, 14, "MT. MOON");
+        addCopies(tags, 21, "SEAFOAM ISLANDS");
+        addCopies(tags, 27, "MT. SILVER CAVE");
+        addCopies(tags, 11, "CLIFF EDGE GATE");
+        addCopies(tags, 3, "BELL TOWER");
+        addCopies(tags, 9, "MT. SILVER");
+        addCopies(tags, 23, "MT. SILVER CAVE");
+        addCopies(tags, 9, "SAFARI ZONE");
+        addCopies(tags, 7, "ROUTE 12");
+        addCopies(tags, 8, "ROUTE 19");
+        addCopies(tags, 7, "ROUTE 20");
+        addCopies(tags, 7, "PALLET TOWN");
+        addCopies(tags, 7, "VIRIDIAN CITY");
+        addCopies(tags, 7, "CERULEAN CITY");
+        addCopies(tags, 8, "VERMILION CITY");
+        addCopies(tags, 2, "CELADON CITY");
+        addCopies(tags, 8, "FUCHSIA CITY");
+        addCopies(tags, 7, "CINNABAR ISLAND");
+        addCopies(tags, 3, "ROUTE 48");
+        addCopies(tags, 9, "ROUTE 26");
+        addCopies(tags, 9, "ROUTE 27");
+        addCopies(tags, 9, "ROUTE 28");
+        addCopies(tags, 6, "MT. MOON");
+        addCopies(tags, 7, "ROCK TUNNEL");
+        addCopies(tags, 3, "VICTORY ROAD");
+        addCopies(tags, 3, "ROUTE 1");
+        addCopies(tags, 3, "ROUTE 2");
+        addCopies(tags, 3, "ROUTE 3");
+        addCopies(tags, 9, "ROUTE 4");
+        addCopies(tags, 3, "ROUTE 5");
+        addCopies(tags, 9, "ROUTE 6");
+        addCopies(tags, 3, "ROUTE 7");
+        addCopies(tags, 3, "ROUTE 8");
+        addCopies(tags, 9, "ROUTE 9");
+        addCopies(tags, 9, "ROUTE 10");
+        addCopies(tags, 3, "ROUTE 11");
+        addCopies(tags, 9, "ROUTE 13");
+        addCopies(tags, 3, "ROUTE 14");
+        addCopies(tags, 3, "ROUTE 15");
+        addCopies(tags, 3, "ROUTE 16");
+        addCopies(tags, 3, "ROUTE 17");
+        addCopies(tags, 3, "ROUTE 18");
+        addCopies(tags, 9, "ROUTE 21");
+        addCopies(tags, 9, "ROUTE 22");
+        addCopies(tags, 9, "ROUTE 24");
+        addCopies(tags, 9, "ROUTE 25");
+        addCopies(tags, 9, "TOHJO FALLS");
+        addCopies(tags, 3, "DIGLETT'S CAVE");
+        addCopies(tags, 7, "VICTORY ROAD");
+        addCopies(tags, 3, "ROUTE 2");
+        addCopies(tags, 3, "VIRIDIAN FOREST");
+        addCopies(tags, 29, "CERULEAN CAVE");
+        // headbutt
+        tags.addAll(List.of("ROUTE 1", "ROUTE 2", "ROUTE 3", "ROUTE 4", "ROUTE 5", "ROUTE 6", "ROUTE 7",
+                "ROUTE 8", "ROUTE 11", "ROUTE 12", "ROUTE 13", "ROUTE 14", "ROUTE 15", "ROUTE 18", "ROUTE 22",
+                "ROUTE 25", "ROUTE 26", "ROUTE 27", "ROUTE 28", "ROUTE 29", "ROUTE 30", "ROUTE 31", "ROUTE 32",
+                "ROUTE 33", "ROUTE 34", "ROUTE 35", "ROUTE 36", "ROUTE 37", "ROUTE 38", "ROUTE 39", "ROUTE 42",
+                "ROUTE 43", "ROUTE 44", "ROUTE 45", "ROUTE 46", "PALLET TOWN", "VIRIDIAN CITY", "PEWTER CITY",
+                "CERULEAN CITY", "VERMILION CITY", "CELADON CITY", "FUCHSIA CITY", "NEW BARK TOWN", "CHERRYGROVE CITY",
+                "VIOLET CITY", "AZALEA TOWN", "ECRUTEAK CITY", "LAKE OF RAGE", "MT. SILVER", "ROUTE 21",
+                "NATIONAL PARK", "ILEX FOREST", "VIRIDIAN FOREST", "ROUTE 47", "ROUTE 48", "SAFARI ZONE", "ROUTE 2",
+                "ROUTE 16", "MT. SILVER CAVE"));
+        addCopies(tags, 4, "BUG CATCHING CONTEST");
+        return Collections.unmodifiableList(tags);
+    }
+
+    private static final List<String> locationTagsUseTimeHGSS = initLocationTagsUseTimeHGSS();
+
+    private static List<String> initLocationTagsUseTimeHGSS() {
+        List<String> tags = new ArrayList<>();
+        addCopies(tags, 7, "NEW BARK TOWN");
+        addCopies(tags, 5, "ROUTE 29");
+        addCopies(tags, 7, "CHERRYGROVE CITY");
+        addCopies(tags, 11, "ROUTE 30");
+        addCopies(tags, 11, "ROUTE 31");
+        addCopies(tags, 7, "VIOLET CITY");
+        addCopies(tags, 10, "SPROUT TOWER");
+        addCopies(tags, 11, "ROUTE 32");
+        addCopies(tags, 32, "RUINS OF ALPH");
+        addCopies(tags, 33, "UNION CAVE");
+        addCopies(tags, 5, "ROUTE 33");
+        addCopies(tags, 22, "SLOWPOKE WELL");
+        addCopies(tags, 11, "ILEX FOREST");
+        addCopies(tags, 11, "ROUTE 34");
+        addCopies(tags, 11, "ROUTE 35");
+        addCopies(tags, 10, "NATIONAL PARK");
+        addCopies(tags, 5, "ROUTE 36");
+        addCopies(tags, 5, "ROUTE 37");
+        addCopies(tags, 7, "ECRUTEAK CITY");
+        addCopies(tags, 10, "BURNED TOWER");
+        addCopies(tags, 40, "BELL TOWER");
+        addCopies(tags, 5, "ROUTE 38");
+        addCopies(tags, 5, "ROUTE 39");
+        addCopies(tags, 7, "OLIVINE CITY");
+        addCopies(tags, 7, "ROUTE 40");
+        addCopies(tags, 7, "ROUTE 41");
+        addCopies(tags, 32, "WHIRL ISLANDS");
+        addCopies(tags, 8, "CIANWOOD CITY");
+        addCopies(tags, 11, "ROUTE 42");
+        addCopies(tags, 38, "MT. MORTAR");
+        addCopies(tags, 11, "ROUTE 43");
+        addCopies(tags, 7, "LAKE OF RAGE");
+        addCopies(tags, 11, "ROUTE 44");
+        addCopies(tags, 20, "ICE PATH");
+        addCopies(tags, 7, "BLACKTHORN CITY");
+        addCopies(tags, 7, "DRAGON'S DEN");
+        addCopies(tags, 11, "ROUTE 45");
+        addCopies(tags, 5, "ROUTE 46");
+        addCopies(tags, 23, "DARK CAVE");
+        addCopies(tags, 11, "ROUTE 47");
+        addCopies(tags, 14, "MT. MOON");
+        addCopies(tags, 31, "SEAFOAM ISLANDS");
+        addCopies(tags, 33, "MT. SILVER CAVE");
+        addCopies(tags, 13, "CLIFF EDGE GATE");
+        addCopies(tags, 5, "BELL TOWER");
+        addCopies(tags, 11, "MT. SILVER");
+        addCopies(tags, 31, "MT. SILVER CAVE");
+        addCopies(tags, 11, "SAFARI ZONE");
+        addCopies(tags, 7, "ROUTE 12");
+        addCopies(tags, 8, "ROUTE 19");
+        addCopies(tags, 7, "ROUTE 20");
+        addCopies(tags, 7, "PALLET TOWN");
+        addCopies(tags, 7, "VIRIDIAN CITY");
+        addCopies(tags, 7, "CERULEAN CITY");
+        addCopies(tags, 8, "VERMILION CITY");
+        addCopies(tags, 2, "CELADON CITY");
+        addCopies(tags, 8, "FUCHSIA CITY");
+        addCopies(tags, 7, "CINNABAR ISLAND");
+        addCopies(tags, 5, "ROUTE 48");
+        addCopies(tags, 11, "ROUTE 26");
+        addCopies(tags, 11, "ROUTE 27");
+        addCopies(tags, 11, "ROUTE 28");
+        addCopies(tags, 10, "MT. MOON");
+        addCopies(tags, 11, "ROCK TUNNEL");
+        addCopies(tags, 5, "VICTORY ROAD");
+        addCopies(tags, 5, "ROUTE 1");
+        addCopies(tags, 5, "ROUTE 2");
+        addCopies(tags, 5, "ROUTE 3");
+        addCopies(tags, 11, "ROUTE 4");
+        addCopies(tags, 5, "ROUTE 5");
+        addCopies(tags, 11, "ROUTE 6");
+        addCopies(tags, 5, "ROUTE 7");
+        addCopies(tags, 5, "ROUTE 8");
+        addCopies(tags, 11, "ROUTE 9");
+        addCopies(tags, 11, "ROUTE 10");
+        addCopies(tags, 5, "ROUTE 11");
+        addCopies(tags, 11, "ROUTE 13");
+        addCopies(tags, 5, "ROUTE 14");
+        addCopies(tags, 5, "ROUTE 15");
+        addCopies(tags, 5, "ROUTE 16");
+        addCopies(tags, 5, "ROUTE 17");
+        addCopies(tags, 5, "ROUTE 18");
+        addCopies(tags, 11, "ROUTE 21");
+        addCopies(tags, 11, "ROUTE 22");
+        addCopies(tags, 11, "ROUTE 24");
+        addCopies(tags, 11, "ROUTE 25");
+        addCopies(tags, 11, "TOHJO FALLS");
+        addCopies(tags, 5, "DIGLETT'S CAVE");
+        addCopies(tags, 11, "VICTORY ROAD");
+        addCopies(tags, 5, "ROUTE 2");
+        addCopies(tags, 5, "VIRIDIAN FOREST");
+        addCopies(tags, 35, "CERULEAN CAVE");
+        // headbutt
+        tags.addAll(List.of("ROUTE 1", "ROUTE 2", "ROUTE 3", "ROUTE 4", "ROUTE 5", "ROUTE 6", "ROUTE 7",
+                "ROUTE 8", "ROUTE 11", "ROUTE 12", "ROUTE 13", "ROUTE 14", "ROUTE 15", "ROUTE 18", "ROUTE 22",
+                "ROUTE 25", "ROUTE 26", "ROUTE 27", "ROUTE 28", "ROUTE 29", "ROUTE 30", "ROUTE 31", "ROUTE 32",
+                "ROUTE 33", "ROUTE 34", "ROUTE 35", "ROUTE 36", "ROUTE 37", "ROUTE 38", "ROUTE 39", "ROUTE 42",
+                "ROUTE 43", "ROUTE 44", "ROUTE 45", "ROUTE 46", "PALLET TOWN", "VIRIDIAN CITY", "PEWTER CITY",
+                "CERULEAN CITY", "VERMILION CITY", "CELADON CITY", "FUCHSIA CITY", "NEW BARK TOWN", "CHERRYGROVE CITY",
+                "VIOLET CITY", "AZALEA TOWN", "ECRUTEAK CITY", "LAKE OF RAGE", "MT. SILVER", "ROUTE 21",
+                "NATIONAL PARK", "ILEX FOREST", "VIRIDIAN FOREST", "ROUTE 47", "ROUTE 48", "SAFARI ZONE", "ROUTE 2",
+                "ROUTE 16", "MT. SILVER CAVE"));
+        addCopies(tags, 4, "BUG CATCHING CONTEST");
+        return Collections.unmodifiableList(tags);
+    }
+
+    private static void addCopies(List<String> list, int n, String s) {
+        list.addAll(Collections.nCopies(n, s));
+    }
+
+    /**
+     * Based on <a href=https://strategywiki.org/wiki/Pok%C3%A9mon_Diamond_and_Pearl/Walkthrough>this walkthrough</a>.
+     */
+    public static final List<String> locationTagsTraverseOrderDPPt = List.of(
+            "TWINLEAF TOWN", "ROUTE 201", "LAKE VERITY", "ROUTE 202", "ROUTE 203", "OREBURGH GATE",
+            "OREBURGH MINE", "ROUTE 204", "RAVAGED PATH", "VALLEY WINDWORKS", "ROUTE 205", "ETERNA FOREST",
+            "OLD CHATEAU", "ETERNA CITY", "ROUTE 206", "WAYWARD CAVE", "ROUTE 207", "ROUTE 208", "ROUTE 209",
+            "SOLACEON RUINS", "ROUTE 210", "ROUTE 215", "ROUTE 214", "MANIAC TUNNEL", "VALOR LAKEFRONT", "ROUTE 213",
+            "PASTORIA CITY", "GREAT MARSH", "ROUTE 212", "TROPHY GARDEN", "CELESTIC TOWN", "FUEGO IRONWORKS",
+            "ROUTE 219", "ROUTE 220", "ROUTE 221", "ROUTE 218", "CANACLAVE CITY", "IRON ISLAND", "LAKE VALOR",
+            "ROUTE 211", "MT. CORONET", "ROUTE 216", "ROUTE 217", "ACUITY LAKEFRONT", "LAKE ACUITY", "ROUTE 222",
+            "SUNYSHORE CITY", "ROUTE 223", "VICTORY ROAD", "POKEMON LEAGUE", "ROUTE 224", "ROUTE 230", "ROUTE 229",
+            "RESORT AREA", "ROUTE 228", "ROUTE 226", "ROUTE 227", "ROUTE 225", "STARK MOUNTAIN", "SNOWPOINT TEMPLE",
+            "SENDOFF SPRING", "TURNBACK CAVE", "HONEY TREE", "UNKNOWN"
+    );
+
+    /**
+     * Based on <a href=https://strategywiki.org/wiki/Pok%C3%A9mon_Gold_and_Silver/Walkthrough>this walkthrough</a>,
+     * with Gen IV-only locations added.
+     */
+    public static final List<String> locationTagsTraverseOrderHGSS = List.of(
+            "NEW BARK TOWN", "ROUTE 29", "ROUTE 46", "CHERRYGROVE CITY", "ROUTE 30", "ROUTE 31", "DARK CAVE",
+            "VIOLET CITY", "SPROUT TOWER", "ROUTE 32", "RUINS OF ALPH", "UNION CAVE", "ROUTE 33", "AZALEA TOWN",
+            "SLOWPOKE WELL", "ILEX FOREST", "ROUTE 34", "GOLDENROD CITY", "ROUTE 35", "NATIONAL PARK",
+            "ROUTE 36", "ROUTE 37", "ECRUTEAK CITY", "BURNED TOWER", "ROUTE 38", "ROUTE 39", "OLIVINE CITY",
+            "ROUTE 40", "ROUTE 41", "CIANWOOD CITY", "CLIFF EDGE GATE", "ROUTE 47", "CLIFF CAVE", "ROUTE 48",
+            "SAFARI ZONE", "ROUTE 42", "MT. MORTAR", "ROUTE 43", "LAKE OF RAGE",
+            "ROUTE 44", "ICE PATH", "BLACKTHORN CITY", "DRAGON'S DEN", "ROUTE 45", "WHIRL ISLANDS",
+            "BELL TOWER", "ROUTE 27", "TOHJO FALLS", "ROUTE 26", "VICTORY ROAD",
+            "VERMILION CITY", "ROUTE 6", "ROUTE 7", "ROUTE 8", "ROCK TUNNEL", "ROUTE 10", "ROUTE 9",
+            "CERULEAN CITY", "ROUTE 24", "ROUTE 25", "ROUTE 5", "CELADON CITY", "ROUTE 16", "ROUTE 17",
+            "ROUTE 18", "FUCHSIA CITY", "ROUTE 15", "ROUTE 14", "ROUTE 13", "ROUTE 12", "ROUTE 11",
+            "DIGLETT'S CAVE", "ROUTE 2", "VIRIDIAN FOREST", "ROUTE 3", "PEWTER CITY", "MT. MOON", "ROUTE 4",
+            "VIRIDIAN CITY", "ROUTE 1", "PALLET TOWN",
+            "ROUTE 21", "CINNABAR ISLAND", "ROUTE 20", "SEAFOAM ISLANDS", "ROUTE 19", "ROUTE 22", "ROUTE 28",
+            "MT. SILVER", "MT. SILVER CAVE", "CERULEAN CAVE", "BUG CATCHING CONTEST"
+    );
+
+    private static void tagEncounterAreas(List<EncounterArea> encounterAreas, List<String> locationTags,
+                                          int[] postGameAreas, int[] partialPostGameAreas) {
+        if (encounterAreas.size() != locationTags.size()) {
+            throw new IllegalArgumentException("Unexpected amount of encounter areas");
+        }
+        for (int i = 0; i < encounterAreas.size(); i++) {
+            encounterAreas.get(i).setLocationTag(locationTags.get(i));
+        }
+        for (int areaIndex : postGameAreas) {
+            encounterAreas.get(areaIndex).setPostGame(true);
+        }
+        for (int areaIndex : partialPostGameAreas) {
+            encounterAreas.get(areaIndex).setPartiallyPostGameCutoff(headbuttPartialPostgameCutoff);
+        }
+    }
+
+    public static void tagEncounterAreas(List<EncounterArea> encounterAreas, int romType, boolean useTimeOfDay) {
+        List<String> locationTags = switch (romType) {
+            case 0 -> locationTagsDP;
+            case 1 -> locationTagsPt;
+            case 2 -> (useTimeOfDay ? locationTagsUseTimeHGSS : locationTagsNoTimeHGSS);
+            default -> throw new IllegalStateException("Unexpected value for romType: " + romType);
+        };
+        int[] postGameAreas = switch (romType) {
+            case 0 -> dpPostGameEncounterAreas;
+            case 1 -> platPostGameEncounterAreas;
+            case 2 -> (useTimeOfDay ? hgssPostGameEncounterAreasTOD : hgssPostGameEncounterAreasNoTOD);
+            default -> throw new IllegalStateException("Unexpected value for romType: " + romType);
+        };
+        int[] partialPostGameAreas = switch (romType) {
+            case 0, 1 -> new int[0];
+            case 2 -> (useTimeOfDay ? hgssPartialPostGameTOD : hgssPartialPostGameNoTOD);
+            default -> throw new IllegalStateException("Unexpected value for romType: " + romType);
+        };
+
+        tagEncounterAreas(encounterAreas, locationTags, postGameAreas, partialPostGameAreas);
     }
 
 }
