@@ -31,7 +31,8 @@ import com.dabomstew.pkrandom.constants.Moves;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toCollection;
 
 public class MoveSynergy {
 
@@ -44,32 +45,28 @@ public class MoveSynergy {
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .map(mv -> mv.number).toList());
                 break;
             case Abilities.drought:
             case Abilities.desolateLand:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .map(mv -> mv.number).toList());
                 break;
             case Abilities.refrigerate:
                 if (pkType1 == Type.ICE || pkType2 == Type.ICE) {
                     synergisticMoves.addAll(moveList
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
-                            .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .map(mv -> mv.number).toList());
                 }
                 break;
             case Abilities.galeWings:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FLYING)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .map(mv -> mv.number).toList());
                 break;
             case Abilities.pixilate:
                 if (pkType1 == Type.FAIRY || pkType2 == Type.FAIRY) {
@@ -77,7 +74,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
                 break;
             case Abilities.aerilate:
@@ -86,7 +83,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
                 break;
             case Abilities.darkAura:
@@ -94,14 +91,14 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.DARK && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.fairyAura:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FAIRY && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.steelworker:
             case Abilities.steelySpirit:
@@ -109,7 +106,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.STEEL && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.galvanize:
                 if (pkType1 == Type.ELECTRIC || pkType2 == Type.ELECTRIC) {
@@ -117,7 +114,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
                 break;
             case Abilities.electricSurge:
@@ -126,28 +123,28 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.ELECTRIC && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.psychicSurge:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.PSYCHIC && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.grassySurge:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.GRASS && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.dragonsMaw:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
         }
 
@@ -155,41 +152,35 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> getSoftAbilityMoveAntiSynergy(int ability, List<Move> moveList) {
         List<Integer> antiSynergisticMoves = new ArrayList<>();
 
-        switch(ability) {
-            case Abilities.drizzle:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
-            case Abilities.drought:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
-            case Abilities.mistySurge:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
+        switch (ability) {
+            case Abilities.drizzle -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
+                    .map(mv -> mv.number)
+                    .toList());
+            case Abilities.drought -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
+                    .map(mv -> mv.number)
+                    .toList());
+            case Abilities.mistySurge -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
+                    .map(mv -> mv.number)
+                    .toList());
         }
 
         return moveList
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> getHardAbilityMoveSynergy(int ability, Type pkType1, Type pkType2, List<Move> moveList,
@@ -232,7 +223,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.hitratio > 0 && mv.hitratio <= 80)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.ownTempo:
             case Abilities.tangledFeet:
@@ -260,7 +251,7 @@ public class MoveSynergy {
                                 (mv.statusMoveType == StatusMoveType.DAMAGE && mv.statusPercentChance < 100) ||
                         mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.swiftSwim:
             case Abilities.rainDish:
@@ -295,12 +286,12 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.hasSpecificStatChange(StatChangeType.ACCURACY, true))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category == MoveCategory.PHYSICAL && mv.hitratio == perfectAccuracy)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.guts:
                 synergisticMoves.add(Moves.facade);
@@ -310,7 +301,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.drought:
             case Abilities.desolateLand:
@@ -331,7 +322,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.isPunchMove)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.snowCloak:
             case Abilities.iceBody:
@@ -349,7 +340,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.acupressure);
                 break;
             case Abilities.adaptability:
@@ -357,14 +348,14 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS && (mv.type == pkType1 || mv.type == pkType2))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.skillLink:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.hitCount >= 3)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.sniper:
                 synergisticMoves.addAll(moveList
@@ -372,14 +363,14 @@ public class MoveSynergy {
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED ||
                                 mv.criticalChance == CriticalChance.GUARANTEED)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.magicGuard:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.mindBlown);
                 break;
             case Abilities.stall:
@@ -391,28 +382,28 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.analytic:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.power > 0 && mv.priority < 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.noGuard:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.hitratio > 0 && mv.hitratio <= 70)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.technician:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> (mv.power >= 40 && mv.power <= 60) || mv.hitCount > 1)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.slowStart:
                 synergisticMoves.add(Moves.transform);
@@ -437,7 +428,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.jumpKick);
                 synergisticMoves.add(Moves.highJumpKick);
                 break;
@@ -446,7 +437,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusType == StatusType.SLEEP)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.sheerForce:
                 synergisticMoves.addAll(moveList
@@ -457,7 +448,7 @@ public class MoveSynergy {
                                 mv.statusMoveType == StatusMoveType.DAMAGE ||
                                 mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.contrary:
                 synergisticMoves.addAll(moveList
@@ -465,7 +456,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statChangeMoveType == StatChangeMoveType.DAMAGE_USER &&
                                 mv.statChanges[0].stages < 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.heavyMetal:
                 synergisticMoves.add(Moves.heatCrash);
@@ -481,7 +472,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.makesContact)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.regenerator:
                 synergisticMoves.add(Moves.uTurn);
@@ -493,7 +484,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.destinyBond);
                 synergisticMoves.add(Moves.encore);
                 synergisticMoves.add(Moves.reflect);
@@ -532,7 +523,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.banefulBunker);
                 break;
             case Abilities.liquidVoice:
@@ -541,7 +532,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.isSoundMove && mv.power > 0)
                             .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
                 break;
             case Abilities.triage:
@@ -549,7 +540,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.absorbPercent > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.surgeSurfer:
                 synergisticMoves.add(Moves.electricTerrain);
@@ -560,7 +551,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.category == MoveCategory.STATUS &&
                                 (mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
         }
 
@@ -568,7 +559,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> getHardAbilityMoveAntiSynergy(int ability, List<Move> moveList) {
@@ -581,7 +572,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.type == Type.FIRE &&
                                 mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 // fallthrough
             case Abilities.drizzle:
             case Abilities.sandStream:
@@ -603,7 +594,7 @@ public class MoveSynergy {
                                 mv.statChanges[0].type == StatChangeType.SPEED &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 antiSynergisticMoves.add(Moves.psychUp);
                 antiSynergisticMoves.add(Moves.haze);
                 break;
@@ -613,7 +604,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.type == Type.WATER &&
                                 mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 // fallthrough
             case Abilities.drought:
                 antiSynergisticMoves.add(Moves.thunder);
@@ -632,7 +623,7 @@ public class MoveSynergy {
                                 mv.hasSpecificStatChange(StatChangeType.EVASION, true) ||
                                 mv.hasSpecificStatChange(StatChangeType.EVASION, false))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.damp:
                 antiSynergisticMoves.add(Moves.selfDestruct);
@@ -661,7 +652,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages < 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.contrary:
                 antiSynergisticMoves.addAll(moveList
@@ -670,7 +661,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 antiSynergisticMoves.add(Moves.shellSmash);
                 break;
             case Abilities.lightMetal:
@@ -682,7 +673,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 antiSynergisticMoves.add(Moves.rest);
                 break;
             case Abilities.psychicSurge:
@@ -690,7 +681,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.priority > 0))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.mistySurge:
                 antiSynergisticMoves.addAll(moveList
@@ -703,7 +694,7 @@ public class MoveSynergy {
                                 mv.statusType == StatusType.POISON ||
                                 mv.statusType == StatusType.TOXIC_POISON)))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 antiSynergisticMoves.add(Moves.rest);
                 break;
             case Abilities.grassySurge:
@@ -719,41 +710,41 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> getStatMoveSynergy(Pokemon pk, List<Move> moveList) {
         List<Integer> synergisticMoves = new ArrayList<>();
 
-        if ((double)pk.hp / (double)pk.bst() < 1.0/8) {
+        if ((double) pk.getHp() / (double)pk.bst() < 1.0/8) {
             synergisticMoves.add(Moves.painSplit);
             synergisticMoves.add(Moves.endeavor);
         }
 
-        if ((double)pk.hp / (double)pk.bst() >= 1.0/4) {
+        if ((double) pk.getHp() / (double)pk.bst() >= 1.0/4) {
             synergisticMoves.add(Moves.waterSpout);
             synergisticMoves.add(Moves.eruption);
             synergisticMoves.add(Moves.counter);
             synergisticMoves.add(Moves.mirrorCoat);
         }
 
-        if (pk.attack * 2 < pk.defense) {
+        if (pk.getAttack() * 2 < pk.getDefense()) {
             synergisticMoves.add(Moves.powerTrick);
         }
 
-        if ((double)(pk.attack + pk.spatk) / (double)pk.bst() < 1.0/4) {
+        if ((double)(pk.getAttack() + pk.getSpatk()) / (double)pk.bst() < 1.0/4) {
             synergisticMoves.add(Moves.powerSplit);
         }
 
-        if ((double)(pk.defense + pk.spdef) / (double)pk.bst() < 1.0/4) {
+        if ((double)(pk.getDefense() + pk.getSpdef()) / (double)pk.bst() < 1.0/4) {
             synergisticMoves.add(Moves.guardSplit);
         }
 
-        if ((double)pk.speed / (double)pk.bst() < 1.0/8) {
+        if ((double) pk.getSpeed() / (double)pk.bst() < 1.0/8) {
             synergisticMoves.add(Moves.gyroBall);
         }
 
-        if ((double)pk.speed / (double)pk.bst() >= 1.0/4) {
+        if ((double) pk.getSpeed() / (double)pk.bst() >= 1.0/4) {
             synergisticMoves.add(Moves.electroBall);
         }
 
@@ -761,34 +752,34 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> getStatMoveAntiSynergy(Pokemon pk, List<Move> moveList) {
         List<Integer> antiSynergisticMoves = new ArrayList<>();
 
-        if ((double)pk.hp / (double)pk.bst() >= 1.0/4) {
+        if ((double) pk.getHp() / (double)pk.bst() >= 1.0/4) {
             antiSynergisticMoves.add(Moves.painSplit);
             antiSynergisticMoves.add(Moves.endeavor);
         }
 
-        if (pk.defense * 2 < pk.attack) {
+        if (pk.getDefense() * 2 < pk.getAttack()) {
             antiSynergisticMoves.add(Moves.powerTrick);
         }
 
-        if ((double)(pk.attack + pk.spatk) / (double)pk.bst() >= 1.0/3) {
+        if ((double)(pk.getAttack() + pk.getSpatk()) / (double)pk.bst() >= 1.0/3) {
             antiSynergisticMoves.add(Moves.powerSplit);
         }
 
-        if ((double)(pk.defense + pk.spdef) / (double)pk.bst() >= 1.0/3) {
+        if ((double)(pk.getDefense() + pk.getSpdef()) / (double)pk.bst() >= 1.0/3) {
             antiSynergisticMoves.add(Moves.guardSplit);
         }
 
-        if ((double)pk.speed / (double)pk.bst() >= 1.0/4) {
+        if ((double) pk.getSpeed() / (double)pk.bst() >= 1.0/4) {
             antiSynergisticMoves.add(Moves.gyroBall);
         }
 
-        if ((double)pk.speed / (double)pk.bst() < 1.0/8) {
+        if ((double) pk.getSpeed() / (double)pk.bst() < 1.0/8) {
             antiSynergisticMoves.add(Moves.electroBall);
         }
 
@@ -796,7 +787,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> getMoveSynergy(Move mv1, List<Move> moveList, int generation) {
@@ -811,7 +802,7 @@ public class MoveSynergy {
                     .stream()
                     .filter(mv -> mv.flinchPercentChance > 0 && mv.priority == 0)
                     .map(mv -> mv.number)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         if (mv1.flinchPercentChance > 0 && mv1.priority == 0) {
@@ -823,7 +814,7 @@ public class MoveSynergy {
                                     mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                     mv.hasSpecificStatChange(StatChangeType.SPEED, true)))
                     .map(mv -> mv.number)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         if (mv1.statChanges[0].stages >= 2 || mv1.statChanges[1].type != StatChangeType.NONE) {
@@ -851,7 +842,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.isTrapMove))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 // fallthrough
             case Moves.poisonPowder:
             case Moves.poisonGas:
@@ -866,7 +857,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.category == MoveCategory.STATUS &&
                                 (mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.protect:
             case Moves.detect:
@@ -880,7 +871,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statChanges[0].stages >= 2 || mv.statChanges[1].type != StatChangeType.NONE)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.shellSmash);
                 break;
             case Moves.willOWisp:
@@ -892,7 +883,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.hitratio <= 50))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.sunnyDay:
                 synergisticMoves.add(Moves.solarBlade);
@@ -909,7 +900,7 @@ public class MoveSynergy {
                                 (mv.hasSpecificStatChange(StatChangeType.ATTACK, false) ||
                                         mv.hasSpecificStatChange(StatChangeType.SPECIAL_ATTACK, false)))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.endure:
                 synergisticMoves.add(Moves.reversal);
@@ -921,7 +912,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS && mv.priority > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.thunderWave:
             case Moves.glare:
@@ -930,12 +921,12 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category == MoveCategory.STATUS && mv.statusType == StatusType.CONFUSION)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.hex);
                 break;
             case Moves.hail:
@@ -956,7 +947,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.isTrapMove))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.spikes:
             case Moves.stealthRock:
@@ -974,7 +965,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.focusPunch:
             case Moves.dreamEater:
@@ -984,7 +975,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE &&
                                 mv.statusType == StatusType.SLEEP)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.torment:
                 synergisticMoves.add(Moves.encore);
@@ -998,7 +989,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE &&
                                 mv.statusType != StatusType.CONFUSION)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.banefulBunker);
                 break;
             case Moves.storedPower:
@@ -1006,7 +997,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statChanges[0].stages > 1 || mv.statChanges[1].type != StatChangeType.NONE)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.acupressure);
                 synergisticMoves.add(Moves.shellSmash);
                 break;
@@ -1025,55 +1016,51 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
-    public static List<Move> getSoftMoveSynergy(Move mv1, List<Move> moveList, int generation,
-                                                boolean effectivenessUpdated) {
+    public static List<Move> getSoftMoveSynergy(Move mv1, List<Move> moveList, TypeTable typeTable) {
         List<Integer> synergisticMoves = new ArrayList<>();
 
         if (mv1.category != MoveCategory.STATUS) {
-            List<Type> notVeryEffective = Effectiveness.notVeryEffective(mv1.type, generation, effectivenessUpdated);
+            List<Type> notVeryEffective = new ArrayList<>();
+            notVeryEffective.addAll(typeTable.notVeryEffectiveWhenAttacking(mv1.type));
+            notVeryEffective.addAll(typeTable.immuneWhenAttacking(mv1.type));
             for (Type nveType: notVeryEffective) {
                 List<Type> superEffectiveAgainstNVE =
-                        Effectiveness.against(nveType, null, generation, effectivenessUpdated)
+                        typeTable.against(nveType, null)
                                 .entrySet()
                                 .stream()
                                 .filter(entry -> entry.getValue() == Effectiveness.DOUBLE)
                                 .map(Map.Entry::getKey)
-                                .collect(Collectors.toList());
+                                .toList();
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS &&
                                 superEffectiveAgainstNVE.contains(mv.type))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
             }
         }
 
-        switch(mv1.number) {
-            case Moves.swordsDance:
-                synergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.category == MoveCategory.PHYSICAL)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
-            case Moves.nastyPlot:
-            case Moves.tailGlow:
-                synergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.category == MoveCategory.SPECIAL)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
+        switch (mv1.number) {
+            case Moves.swordsDance -> synergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.category == MoveCategory.PHYSICAL)
+                    .map(mv -> mv.number)
+                    .toList());
+            case Moves.nastyPlot, Moves.tailGlow -> synergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.category == MoveCategory.SPECIAL)
+                    .map(mv -> mv.number)
+                    .toList());
         }
 
         return moveList
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> getHardMoveAntiSynergy(Move mv1, List<Move> moveList) {
@@ -1087,43 +1074,38 @@ public class MoveSynergy {
                             (mv.statusType == mv1.statusType ||
                                     (mv1.statusType != StatusType.CONFUSION && mv.statusType != StatusType.CONFUSION))))
                     .map(mv -> mv.number)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
-        switch(mv1.number) {
-            case Moves.protect:
+        switch (mv1.number) {
+            case Moves.protect -> {
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
                 antiSynergisticMoves.add(Moves.kingsShield);
-                break;
-            case Moves.detect:
+            }
+            case Moves.detect -> {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
                 antiSynergisticMoves.add(Moves.kingsShield);
-                break;
-            case Moves.kingsShield:
+            }
+            case Moves.kingsShield -> {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
-                break;
-            case Moves.banefulBunker:
+            }
+            case Moves.banefulBunker -> {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.kingsShield);
-                break;
-            case Moves.returnTheMoveNotTheKeyword:
-                antiSynergisticMoves.add(Moves.frustration);
-                break;
-            case Moves.frustration:
-                antiSynergisticMoves.add(Moves.returnTheMoveNotTheKeyword);
-                break;
-            case Moves.leechSeed:
-            case Moves.perishSong:
+            }
+            case Moves.returnTheMoveNotTheKeyword -> antiSynergisticMoves.add(Moves.frustration);
+            case Moves.frustration -> antiSynergisticMoves.add(Moves.returnTheMoveNotTheKeyword);
+            case Moves.leechSeed, Moves.perishSong -> {
                 antiSynergisticMoves.add(Moves.whirlwind);
                 antiSynergisticMoves.add(Moves.roar);
                 antiSynergisticMoves.add(Moves.circleThrow);
                 antiSynergisticMoves.add(Moves.dragonTail);
-                break;
+            }
         }
 
         if (mv1.type != null) {
@@ -1145,7 +1127,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> getSoftMoveAntiSynergy(Move mv1, List<Move> moveList) {
@@ -1157,49 +1139,43 @@ public class MoveSynergy {
                     .stream()
                     .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == mv1.type))
                     .map(mv -> mv.number)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         switch (mv1.number) {
-            case Moves.waterSport:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.FIRE))
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
-            case Moves.mudSport:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.ELECTRIC))
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
+            case Moves.waterSport -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.FIRE))
+                    .map(mv -> mv.number)
+                    .toList());
+            case Moves.mudSport -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.ELECTRIC))
+                    .map(mv -> mv.number)
+                    .toList());
         }
 
         return moveList
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .collect(toCollection(ArrayList::new));
     }
 
     public static List<Move> requiresOtherMove(Move mv1, List<Move> moveList) {
         List<Integer> requiresMove = new ArrayList<>();
-        switch(mv1.number) {
-            case Moves.spitUp:
-            case Moves.swallow:
-                requiresMove.add(Moves.stockpile);
-                break;
-            case Moves.dreamEater:
-            case Moves.nightmare:
-                requiresMove.addAll(moveList
-                        .stream()
-                        .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
+        switch (mv1.number) {
+            case Moves.spitUp, Moves.swallow -> requiresMove.add(Moves.stockpile);
+            case Moves.dreamEater, Moves.nightmare -> requiresMove.addAll(moveList
+                    .stream()
+                    .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
+                    .map(mv -> mv.number)
+                    .toList());
         }
-        return moveList.stream().filter(mv -> requiresMove.contains(mv.number)).distinct().collect(Collectors.toList());
+        return moveList
+                .stream()
+                .filter(mv -> requiresMove.contains(mv.number))
+                .distinct()
+                .collect(toCollection(ArrayList::new));
     }
 }
